@@ -18,62 +18,75 @@
  */
 package org.apache.parquet.glob;
 
-import java.util.Arrays;
+import static junit.framework.Assert.fail;
+import static org.junit.Assert.assertEquals;
 
+import java.util.List;
+import junit.framework.Assert;
 import org.apache.parquet.Strings;
 import org.apache.parquet.glob.GlobParser.GlobParseException;
 import org.junit.Test;
-
-import junit.framework.Assert;
-
-import static junit.framework.Assert.fail;
-import static org.junit.Assert.assertEquals;
 
 public class TestGlob {
 
   @Test
   public void testNoGlobs() {
-    assertEquals(Arrays.asList("foo"), Strings.expandGlob("foo"));
+    assertEquals(List.of("foo"), Strings.expandGlob("foo"));
   }
 
   @Test
   public void testEmptyGroup() {
-    assertEquals(Arrays.asList(""), Strings.expandGlob(""));
-    assertEquals(Arrays.asList(""), Strings.expandGlob("{}"));
-    assertEquals(Arrays.asList("a"), Strings.expandGlob("a{}"));
-    assertEquals(Arrays.asList("ab"), Strings.expandGlob("a{}b"));
-    assertEquals(Arrays.asList("a"), Strings.expandGlob("{}a"));
-    assertEquals(Arrays.asList("a"), Strings.expandGlob("a{}"));
-    assertEquals(Arrays.asList("", ""), Strings.expandGlob("{,}"));
-    assertEquals(Arrays.asList("ab", "a", "ac"), Strings.expandGlob("a{b,{},c}"));
+    assertEquals(List.of(""), Strings.expandGlob(""));
+    assertEquals(List.of(""), Strings.expandGlob("{}"));
+    assertEquals(List.of("a"), Strings.expandGlob("a{}"));
+    assertEquals(List.of("ab"), Strings.expandGlob("a{}b"));
+    assertEquals(List.of("a"), Strings.expandGlob("{}a"));
+    assertEquals(List.of("a"), Strings.expandGlob("a{}"));
+    assertEquals(List.of("", ""), Strings.expandGlob("{,}"));
+    assertEquals(List.of("ab", "a", "ac"), Strings.expandGlob("a{b,{},c}"));
   }
 
   @Test
   public void testSingleLevel() {
-    assertEquals(Arrays.asList("foobar", "foobaz"), Strings.expandGlob("foo{bar,baz}"));
-    assertEquals(Arrays.asList("startfooend", "startbarend"), Strings.expandGlob("start{foo,bar}end"));
-    assertEquals(Arrays.asList("fooend", "barend"), Strings.expandGlob("{foo,bar}end"));
-    assertEquals(Arrays.asList(
-        "startfooenda", "startfooendb", "startfooendc", "startfooendd",
-        "startbarenda", "startbarendb", "startbarendc", "startbarendd"),
+    assertEquals(List.of("foobar", "foobaz"), Strings.expandGlob("foo{bar,baz}"));
+    assertEquals(List.of("startfooend", "startbarend"), Strings.expandGlob("start{foo,bar}end"));
+    assertEquals(List.of("fooend", "barend"), Strings.expandGlob("{foo,bar}end"));
+    assertEquals(
+        List.of(
+            "startfooenda",
+            "startfooendb",
+            "startfooendc",
+            "startfooendd",
+            "startbarenda",
+            "startbarendb",
+            "startbarendc",
+            "startbarendd"),
         Strings.expandGlob("start{foo,bar}end{a,b,c,d}"));
-    assertEquals(Arrays.asList("xa", "xb", "xc", "ya", "yb", "yc"), Strings.expandGlob("{x,y}{a,b,c}"));
-    assertEquals(Arrays.asList("x", "y", "z"), Strings.expandGlob("{x,y,z}"));
+    assertEquals(List.of("xa", "xb", "xc", "ya", "yb", "yc"), Strings.expandGlob("{x,y}{a,b,c}"));
+    assertEquals(List.of("x", "y", "z"), Strings.expandGlob("{x,y,z}"));
   }
 
   @Test
   public void testNested() {
-    assertEquals(Arrays.asList(
-            "startoneend", "startpretwopostend", "startprethreepostend",
-            "startfourend", "startfiveend", "a", "b", "foox", "fooy"),
-            Strings.expandGlob("{start{one,pre{two,three}post,{four,five}}end,a,b,foo{x,y}}"));
+    assertEquals(
+        List.of(
+            "startoneend",
+            "startpretwopostend",
+            "startprethreepostend",
+            "startfourend",
+            "startfiveend",
+            "a",
+            "b",
+            "foox",
+            "fooy"),
+        Strings.expandGlob("{start{one,pre{two,three}post,{four,five}}end,a,b,foo{x,y}}"));
   }
 
   @Test
   public void testExtraBraces() {
-    assertEquals(Arrays.asList("x", "y", "z"), Strings.expandGlob("{{x,y,z}}"));
-    assertEquals(Arrays.asList("x", "y", "z"), Strings.expandGlob("{{{x,y,z}}}"));
-    assertEquals(Arrays.asList("startx", "starta", "startb", "starty"), Strings.expandGlob("start{x,{a,b},y}"));
+    assertEquals(List.of("x", "y", "z"), Strings.expandGlob("{{x,y,z}}"));
+    assertEquals(List.of("x", "y", "z"), Strings.expandGlob("{{{x,y,z}}}"));
+    assertEquals(List.of("startx", "starta", "startb", "starty"), Strings.expandGlob("start{x,{a,b},y}"));
   }
 
   @Test
@@ -82,26 +95,24 @@ public class TestGlob {
       Strings.expandGlob("foo,bar");
       fail("This should throw");
     } catch (GlobParseException e) {
-      Assert.assertEquals("Unexpected comma outside of a {} group:\n" +
-          "foo,bar\n" +
-          "---^", e.getMessage());
+      Assert.assertEquals("Unexpected comma outside of a {} group:\n" + "foo,bar\n" + "---^", e.getMessage());
     }
   }
 
   @Test
   public void testCommaCornerCases() {
     // single empty string in each location
-    assertEquals(Arrays.asList("foobar", "foo", "foobaz"), Strings.expandGlob("foo{bar,,baz}"));
-    assertEquals(Arrays.asList("foo", "foobar", "foobaz"), Strings.expandGlob("foo{,bar,baz}"));
-    assertEquals(Arrays.asList("foobar", "foobaz", "foo"), Strings.expandGlob("foo{bar,baz,}"));
+    assertEquals(List.of("foobar", "foo", "foobaz"), Strings.expandGlob("foo{bar,,baz}"));
+    assertEquals(List.of("foo", "foobar", "foobaz"), Strings.expandGlob("foo{,bar,baz}"));
+    assertEquals(List.of("foobar", "foobaz", "foo"), Strings.expandGlob("foo{bar,baz,}"));
 
     // multiple empty strings
-    assertEquals(Arrays.asList("foobar", "foo", "foo", "foobaz"), Strings.expandGlob("foo{bar,,,baz}"));
-    assertEquals(Arrays.asList("foo", "foo", "foobar", "foobaz"), Strings.expandGlob("foo{,,bar,baz}"));
-    assertEquals(Arrays.asList("foobar", "foobaz", "foo", "foo"), Strings.expandGlob("foo{bar,baz,,}"));
+    assertEquals(List.of("foobar", "foo", "foo", "foobaz"), Strings.expandGlob("foo{bar,,,baz}"));
+    assertEquals(List.of("foo", "foo", "foobar", "foobaz"), Strings.expandGlob("foo{,,bar,baz}"));
+    assertEquals(List.of("foobar", "foobaz", "foo", "foo"), Strings.expandGlob("foo{bar,baz,,}"));
 
     // between groups
-    assertEquals(Arrays.asList("x", "y", "", "a", "b"), Strings.expandGlob("{{x,y},,{a,b}}"));
+    assertEquals(List.of("x", "y", "", "a", "b"), Strings.expandGlob("{{x,y},,{a,b}}"));
   }
 
   private void assertNotEnoughCloseBraces(String s) {
@@ -124,7 +135,6 @@ public class TestGlob {
     }
   }
 
-
   @Test
   public void testMismatchedBraces() {
     assertNotEnoughCloseBraces("{");
@@ -140,5 +150,4 @@ public class TestGlob {
     assertTooManyCloseBraces("foo}}bar}");
     assertTooManyCloseBraces("foo{}{{bar}}}");
   }
-
 }
