@@ -19,6 +19,13 @@
 
 package org.apache.parquet.hadoop;
 
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.INT32;
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
@@ -27,11 +34,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Random;
 import java.util.zip.CRC32;
-
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
+import org.apache.parquet.HadoopReadOptions;
+import org.apache.parquet.ParquetReadOptions;
 import org.apache.parquet.bytes.BytesInput;
 import org.apache.parquet.bytes.HeapByteBufferAllocator;
+import org.apache.parquet.bytes.TrackingByteBufferAllocator;
 import org.apache.parquet.column.ColumnDescriptor;
 import org.apache.parquet.column.Encoding;
 import org.apache.parquet.column.ParquetProperties;
@@ -55,22 +64,17 @@ import org.apache.parquet.hadoop.util.HadoopInputFile;
 import org.apache.parquet.hadoop.util.HadoopOutputFile;
 import org.apache.parquet.io.InputFile;
 import org.apache.parquet.io.OutputFile;
-import org.apache.parquet.io.PositionOutputStream;
 import org.apache.parquet.io.ParquetDecodingException;
+import org.apache.parquet.io.PositionOutputStream;
 import org.apache.parquet.io.SeekableInputStream;
 import org.apache.parquet.schema.MessageType;
 import org.apache.parquet.schema.MessageTypeParser;
 import org.apache.parquet.schema.Types;
+import org.junit.After;
+import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
-
-import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.INT32;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
 /**
  * Tests that page level checksums are correctly written and that checksum verification works as
@@ -80,8 +84,20 @@ public class TestDataPageChecksums {
   @Rule
   public final TemporaryFolder tempFolder = new TemporaryFolder();
 
-  private static final Statistics<?> EMPTY_STATS_INT32 = Statistics.getBuilderForReading(
-    Types.required(INT32).named("a")).build();
+  private TrackingByteBufferAllocator allocator;
+
+  @Before
+  public void initAllocator() {
+    allocator = TrackingByteBufferAllocator.wrap(new HeapByteBufferAllocator());
+  }
+
+  @After
+  public void closeAllocator() {
+    allocator.close();
+  }
+
+  private static final Statistics<?> EMPTY_STATS_INT32 =
+      Statistics.getBuilderForReading(Types.required(INT32).named("a")).build();
 
   private CRC32 crc = new CRC32();
 
@@ -89,11 +105,8 @@ public class TestDataPageChecksums {
 
   private static final int PAGE_SIZE = 1024 * 1024; // 1MB
 
-  private static final MessageType schemaSimple = MessageTypeParser.parseMessageType(
-    "message m {" +
-    "  required int32 a;" +
-    "  required int32 b;" +
-    "}");
+  private static final MessageType schemaSimple =
+      MessageTypeParser.parseMessageType("message m {" + "  required int32 a;" + "  required int32 b;" + "}");
   private static final ColumnDescriptor colADesc = schemaSimple.getColumns().get(0);
   private static final ColumnDescriptor colBDesc = schemaSimple.getColumns().get(1);
   private static final byte[] colAPage1Bytes = new byte[PAGE_SIZE];
@@ -102,11 +115,12 @@ public class TestDataPageChecksums {
   private static final byte[] colBPage2Bytes = new byte[PAGE_SIZE];
   private static final int numRecordsLargeFile = (2 * PAGE_SIZE) / Integer.BYTES;
 
-  /** Write out sample Parquet file using ColumnChunkPageWriteStore directly, return path to file */
-  private Path writeSimpleParquetFile(Configuration conf,
-                                      CompressionCodecName compression,
-                                      ParquetProperties.WriterVersion version)
-    throws IOException {
+  /**
+   * Write out sample Parquet file using ColumnChunkPageWriteStore directly, return path to file
+   */
+  private Path writeSimpleParquetFile(
+      Configuration conf, CompressionCodecName compression, ParquetProperties.WriterVersion version)
+      throws IOException {
     File file = tempFolder.newFile();
     file.delete();
     Path path = new Path(file.toURI());
@@ -118,8 +132,14 @@ public class TestDataPageChecksums {
       colBPage2Bytes[i] = (byte) (i - 100);
     }
 
-    ParquetFileWriter writer =  new ParquetFileWriter(conf, schemaSimple, path,
-      ParquetWriter.DEFAULT_BLOCK_SIZE, ParquetWriter.MAX_PADDING_SIZE_DEFAULT);
+    ParquetFileWriter writer = new ParquetFileWriter(
+        conf,
+        schemaSimple,
+        path,
+        ParquetWriter.DEFAULT_BLOCK_SIZE,
+        ParquetWriter.MAX_PADDING_SIZE_DEFAULT,
+        Integer.MAX_VALUE,
+        allocator);
 
     writer.start();
     writer.startBlock(numRecordsLargeFile);
@@ -128,49 +148,88 @@ public class TestDataPageChecksums {
     BytesInputCompressor compressor = codecFactory.getCompressor(compression);
 
     ColumnChunkPageWriteStore writeStore = new ColumnChunkPageWriteStore(
-      compressor, schemaSimple, new HeapByteBufferAllocator(),
-      Integer.MAX_VALUE, ParquetOutputFormat.getPageWriteChecksumEnabled(conf));
+        compressor,
+        schemaSimple,
+        new HeapByteBufferAllocator(),
+        Integer.MAX_VALUE,
+        ParquetOutputFormat.getPageWriteChecksumEnabled(conf));
 
     if (version == ParquetProperties.WriterVersion.PARQUET_1_0) {
       PageWriter pageWriter = writeStore.getPageWriter(colADesc);
-      pageWriter.writePage(BytesInput.from(colAPage1Bytes), numRecordsLargeFile / 2,
-        numRecordsLargeFile / 2, EMPTY_STATS_INT32, Encoding.RLE, Encoding.RLE, Encoding.PLAIN);
-      pageWriter.writePage(BytesInput.from(colAPage2Bytes), numRecordsLargeFile / 2,
-        numRecordsLargeFile / 2, EMPTY_STATS_INT32, Encoding.RLE, Encoding.RLE, Encoding.PLAIN);
+      pageWriter.writePage(
+          BytesInput.from(colAPage1Bytes),
+          numRecordsLargeFile / 2,
+          numRecordsLargeFile / 2,
+          EMPTY_STATS_INT32,
+          Encoding.RLE,
+          Encoding.RLE,
+          Encoding.PLAIN);
+      pageWriter.writePage(
+          BytesInput.from(colAPage2Bytes),
+          numRecordsLargeFile / 2,
+          numRecordsLargeFile / 2,
+          EMPTY_STATS_INT32,
+          Encoding.RLE,
+          Encoding.RLE,
+          Encoding.PLAIN);
 
       pageWriter = writeStore.getPageWriter(colBDesc);
-      pageWriter.writePage(BytesInput.from(colBPage1Bytes), numRecordsLargeFile / 2,
-        numRecordsLargeFile / 2, EMPTY_STATS_INT32, Encoding.RLE, Encoding.RLE, Encoding.PLAIN);
-      pageWriter.writePage(BytesInput.from(colBPage2Bytes), numRecordsLargeFile / 2,
-        numRecordsLargeFile / 2, EMPTY_STATS_INT32, Encoding.RLE, Encoding.RLE, Encoding.PLAIN);
+      pageWriter.writePage(
+          BytesInput.from(colBPage1Bytes),
+          numRecordsLargeFile / 2,
+          numRecordsLargeFile / 2,
+          EMPTY_STATS_INT32,
+          Encoding.RLE,
+          Encoding.RLE,
+          Encoding.PLAIN);
+      pageWriter.writePage(
+          BytesInput.from(colBPage2Bytes),
+          numRecordsLargeFile / 2,
+          numRecordsLargeFile / 2,
+          EMPTY_STATS_INT32,
+          Encoding.RLE,
+          Encoding.RLE,
+          Encoding.PLAIN);
     } else if (version == ParquetProperties.WriterVersion.PARQUET_2_0) {
       PageWriter pageWriter = writeStore.getPageWriter(colADesc);
       pageWriter.writePageV2(
-        numRecordsLargeFile / 2, 0, numRecordsLargeFile / 2,
-        BytesInput.from(colAPage1Bytes, 0, PAGE_SIZE / 4),
-        BytesInput.from(colAPage1Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
-        Encoding.PLAIN, BytesInput.from(colAPage1Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
-        EMPTY_STATS_INT32);
+          numRecordsLargeFile / 2,
+          0,
+          numRecordsLargeFile / 2,
+          BytesInput.from(colAPage1Bytes, 0, PAGE_SIZE / 4),
+          BytesInput.from(colAPage1Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
+          Encoding.PLAIN,
+          BytesInput.from(colAPage1Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
+          EMPTY_STATS_INT32);
       pageWriter.writePageV2(
-        numRecordsLargeFile / 2, 0, numRecordsLargeFile / 2,
-        BytesInput.from(colAPage2Bytes, 0, PAGE_SIZE / 4),
-        BytesInput.from(colAPage2Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
-        Encoding.PLAIN, BytesInput.from(colAPage2Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
-        EMPTY_STATS_INT32);
+          numRecordsLargeFile / 2,
+          0,
+          numRecordsLargeFile / 2,
+          BytesInput.from(colAPage2Bytes, 0, PAGE_SIZE / 4),
+          BytesInput.from(colAPage2Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
+          Encoding.PLAIN,
+          BytesInput.from(colAPage2Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
+          EMPTY_STATS_INT32);
 
       pageWriter = writeStore.getPageWriter(colBDesc);
       pageWriter.writePageV2(
-        numRecordsLargeFile / 2, 0, numRecordsLargeFile / 2,
-        BytesInput.from(colBPage1Bytes, 0, PAGE_SIZE / 4),
-        BytesInput.from(colBPage1Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
-        Encoding.PLAIN, BytesInput.from(colBPage1Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
-        EMPTY_STATS_INT32);
+          numRecordsLargeFile / 2,
+          0,
+          numRecordsLargeFile / 2,
+          BytesInput.from(colBPage1Bytes, 0, PAGE_SIZE / 4),
+          BytesInput.from(colBPage1Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
+          Encoding.PLAIN,
+          BytesInput.from(colBPage1Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
+          EMPTY_STATS_INT32);
       pageWriter.writePageV2(
-        numRecordsLargeFile / 2, 0, numRecordsLargeFile / 2,
-        BytesInput.from(colBPage2Bytes, 0, PAGE_SIZE / 4),
-        BytesInput.from(colBPage2Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
-        Encoding.PLAIN, BytesInput.from(colBPage2Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
-        EMPTY_STATS_INT32);
+          numRecordsLargeFile / 2,
+          0,
+          numRecordsLargeFile / 2,
+          BytesInput.from(colBPage2Bytes, 0, PAGE_SIZE / 4),
+          BytesInput.from(colBPage2Bytes, PAGE_SIZE / 4, PAGE_SIZE / 4),
+          Encoding.PLAIN,
+          BytesInput.from(colBPage2Bytes, PAGE_SIZE / 2, PAGE_SIZE / 2),
+          EMPTY_STATS_INT32);
     } else {
       throw new IllegalArgumentException("Unknown writer version: " + version);
     }
@@ -187,39 +246,42 @@ public class TestDataPageChecksums {
 
   // Sample data, nested schema with nulls
 
-  private static final MessageType schemaNestedWithNulls = MessageTypeParser.parseMessageType(
-    "message m {" +
-      "  optional group c {" +
-      "    required int64 id;" +
-      "    required group d {" +
-      "      repeated int32 val;" +
-      "    }" +
-      "  }" +
-      "}");
-  private static final ColumnDescriptor colCIdDesc = schemaNestedWithNulls.getColumns().get(0);
-  private static final ColumnDescriptor colDValDesc = schemaNestedWithNulls.getColumns().get(1);
+  private static final MessageType schemaNestedWithNulls =
+      MessageTypeParser.parseMessageType("message m {" + "  optional group c {"
+          + "    required int64 id;"
+          + "    required group d {"
+          + "      repeated int32 val;"
+          + "    }"
+          + "  }"
+          + "}");
+  private static final ColumnDescriptor colCIdDesc =
+      schemaNestedWithNulls.getColumns().get(0);
+  private static final ColumnDescriptor colDValDesc =
+      schemaNestedWithNulls.getColumns().get(1);
 
   private static final double nullRatio = 0.3;
   private static final int numRecordsNestedWithNullsFile = 2000;
 
-  private Path writeNestedWithNullsSampleParquetFile(Configuration conf,
-                                                     boolean dictionaryEncoding,
-                                                     CompressionCodecName compression,
-                                                     ParquetProperties.WriterVersion version)
-    throws IOException {
+  private Path writeNestedWithNullsSampleParquetFile(
+      Configuration conf,
+      boolean dictionaryEncoding,
+      CompressionCodecName compression,
+      ParquetProperties.WriterVersion version)
+      throws IOException {
     File file = tempFolder.newFile();
     file.delete();
     Path path = new Path(file.toURI());
 
     try (ParquetWriter<Group> writer = ExampleParquetWriter.builder(path)
-      .withConf(conf)
-      .withWriteMode(ParquetFileWriter.Mode.OVERWRITE)
-      .withCompressionCodec(compression)
-      .withDictionaryEncoding(dictionaryEncoding)
-      .withType(schemaNestedWithNulls)
-      .withPageWriteChecksumEnabled(ParquetOutputFormat.getPageWriteChecksumEnabled(conf))
-      .withWriterVersion(version)
-      .build()) {
+        .withConf(conf)
+        .withAllocator(allocator)
+        .withWriteMode(ParquetFileWriter.Mode.OVERWRITE)
+        .withCompressionCodec(compression)
+        .withDictionaryEncoding(dictionaryEncoding)
+        .withType(schemaNestedWithNulls)
+        .withPageWriteChecksumEnabled(ParquetOutputFormat.getPageWriteChecksumEnabled(conf))
+        .withWriterVersion(version)
+        .build()) {
       GroupFactory groupFactory = new SimpleGroupFactory(schemaNestedWithNulls);
       Random rand = new Random(42);
 
@@ -229,13 +291,14 @@ public class TestDataPageChecksums {
           // With equal probability, write out either 1 or 3 values in group e. To ensure our values
           // are dictionary encoded when required, perform modulo.
           if (rand.nextDouble() > 0.5) {
-            group.addGroup("c").append("id", (long) i).addGroup("d")
-              .append("val", rand.nextInt() % 10);
+            group.addGroup("c").append("id", (long) i).addGroup("d").append("val", rand.nextInt() % 10);
           } else {
-            group.addGroup("c").append("id", (long) i).addGroup("d")
-              .append("val", rand.nextInt() % 10)
-              .append("val", rand.nextInt() % 10)
-              .append("val", rand.nextInt() % 10);
+            group.addGroup("c")
+                .append("id", (long) i)
+                .addGroup("d")
+                .append("val", rand.nextInt() % 10)
+                .append("val", rand.nextInt() % 10)
+                .append("val", rand.nextInt() % 10);
           }
         }
         writer.write(group);
@@ -257,8 +320,7 @@ public class TestDataPageChecksums {
 
     Path path = writeSimpleParquetFile(conf, CompressionCodecName.UNCOMPRESSED, version);
 
-    try (ParquetFileReader reader = getParquetFileReader(path, conf,
-      Arrays.asList(colADesc, colBDesc))) {
+    try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
       PageReadStore pageReadStore = reader.readNextRowGroup();
 
       DataPage colAPage1 = readNextPage(colADesc, pageReadStore);
@@ -289,7 +351,9 @@ public class TestDataPageChecksums {
     testWriteOnVerifyOff(ParquetProperties.WriterVersion.PARQUET_2_0);
   }
 
-  /** Test that we do not write out checksums if the feature is turned off */
+  /**
+   * Test that we do not write out checksums if the feature is turned off
+   */
   private void testWriteOffVerifyOff(ParquetProperties.WriterVersion version) throws IOException {
     Configuration conf = new Configuration();
     conf.setBoolean(ParquetOutputFormat.PAGE_WRITE_CHECKSUM_ENABLED, false);
@@ -297,8 +361,7 @@ public class TestDataPageChecksums {
 
     Path path = writeSimpleParquetFile(conf, CompressionCodecName.UNCOMPRESSED, version);
 
-    try (ParquetFileReader reader = getParquetFileReader(path, conf,
-      Arrays.asList(colADesc, colBDesc))) {
+    try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
       PageReadStore pageReadStore = reader.readNextRowGroup();
 
       assertCrcNotSet(readNextPage(colADesc, pageReadStore));
@@ -329,18 +392,13 @@ public class TestDataPageChecksums {
 
     Path path = writeSimpleParquetFile(conf, CompressionCodecName.UNCOMPRESSED, version);
 
-    try (ParquetFileReader reader = getParquetFileReader(path, conf,
-      Arrays.asList(colADesc, colBDesc))) {
+    try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
       PageReadStore pageReadStore = reader.readNextRowGroup();
 
-      assertCorrectContent(getPageBytes(readNextPage(colADesc, pageReadStore)),
-        colAPage1Bytes);
-      assertCorrectContent(getPageBytes(readNextPage(colADesc, pageReadStore)),
-        colAPage2Bytes);
-      assertCorrectContent(getPageBytes(readNextPage(colBDesc, pageReadStore)),
-        colBPage1Bytes);
-      assertCorrectContent(getPageBytes(readNextPage(colBDesc, pageReadStore)),
-        colBPage2Bytes);
+      assertCorrectContent(getPageBytes(readNextPage(colADesc, pageReadStore)), colAPage1Bytes);
+      assertCorrectContent(getPageBytes(readNextPage(colADesc, pageReadStore)), colAPage2Bytes);
+      assertCorrectContent(getPageBytes(readNextPage(colBDesc, pageReadStore)), colBPage1Bytes);
+      assertCorrectContent(getPageBytes(readNextPage(colBDesc, pageReadStore)), colBPage2Bytes);
     }
   }
 
@@ -365,8 +423,7 @@ public class TestDataPageChecksums {
 
     Path path = writeSimpleParquetFile(conf, CompressionCodecName.UNCOMPRESSED, version);
 
-    try (ParquetFileReader reader = getParquetFileReader(path, conf,
-      Arrays.asList(colADesc, colBDesc))) {
+    try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
       PageReadStore pageReadStore = reader.readNextRowGroup();
 
       DataPage colAPage1 = readNextPage(colADesc, pageReadStore);
@@ -427,24 +484,22 @@ public class TestDataPageChecksums {
         // First we disable checksum verification, the corruption will go undetected as it is in the
         // data section of the page
         conf.setBoolean(ParquetInputFormat.PAGE_VERIFY_CHECKSUM_ENABLED, false);
-        try (ParquetFileReader reader = getParquetFileReader(path, conf,
-          Arrays.asList(colADesc, colBDesc))) {
+        try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
           PageReadStore pageReadStore = reader.readNextRowGroup();
 
           DataPage colAPage1 = readNextPage(colADesc, pageReadStore);
-          assertFalse("Data in page was not corrupted",
-            Arrays.equals(getPageBytes(colAPage1), colAPage1Bytes));
+          assertFalse(
+              "Data in page was not corrupted", Arrays.equals(getPageBytes(colAPage1), colAPage1Bytes));
           readNextPage(colADesc, pageReadStore);
           readNextPage(colBDesc, pageReadStore);
           DataPage colBPage2 = readNextPage(colBDesc, pageReadStore);
-          assertFalse("Data in page was not corrupted",
-            Arrays.equals(getPageBytes(colBPage2), colBPage2Bytes));
+          assertFalse(
+              "Data in page was not corrupted", Arrays.equals(getPageBytes(colBPage2), colBPage2Bytes));
         }
 
         // Now we enable checksum verification, the corruption should be detected
         conf.setBoolean(ParquetInputFormat.PAGE_VERIFY_CHECKSUM_ENABLED, true);
-        try (ParquetFileReader reader =
-               getParquetFileReader(path, conf, Arrays.asList(colADesc, colBDesc))) {
+        try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
           // We expect an exception on the first encountered corrupt page (in readAllPages)
           assertVerificationFailed(reader);
         }
@@ -473,8 +528,7 @@ public class TestDataPageChecksums {
 
     Path path = writeSimpleParquetFile(conf, CompressionCodecName.SNAPPY, version);
 
-    try (ParquetFileReader reader = getParquetFileReader(path, conf,
-      Arrays.asList(colADesc, colBDesc))) {
+    try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colADesc, colBDesc))) {
       PageReadStore pageReadStore = reader.readNextRowGroup();
 
       DataPage colAPage1 = readNextPage(colADesc, pageReadStore);
@@ -520,8 +574,7 @@ public class TestDataPageChecksums {
     conf.setBoolean(ParquetInputFormat.PAGE_VERIFY_CHECKSUM_ENABLED, false);
     Path refPath = writeNestedWithNullsSampleParquetFile(conf, false, CompressionCodecName.SNAPPY, version);
 
-    try (ParquetFileReader refReader = getParquetFileReader(refPath, conf,
-      Arrays.asList(colCIdDesc, colDValDesc))) {
+    try (ParquetFileReader refReader = getParquetFileReader(refPath, conf, List.of(colCIdDesc, colDValDesc))) {
       PageReadStore refPageReadStore = refReader.readNextRowGroup();
       byte[] colCIdPageBytes = getPageBytes(readNextPage(colCIdDesc, refPageReadStore));
       byte[] colDValPageBytes = getPageBytes(readNextPage(colDValDesc, refPageReadStore));
@@ -531,8 +584,7 @@ public class TestDataPageChecksums {
       conf.setBoolean(ParquetInputFormat.PAGE_VERIFY_CHECKSUM_ENABLED, true);
       Path path = writeNestedWithNullsSampleParquetFile(conf, false, CompressionCodecName.SNAPPY, version);
 
-      try (ParquetFileReader reader = getParquetFileReader(path, conf,
-        Arrays.asList(colCIdDesc, colDValDesc))) {
+      try (ParquetFileReader reader = getParquetFileReader(path, conf, List.of(colCIdDesc, colDValDesc))) {
         PageReadStore pageReadStore = reader.readNextRowGroup();
 
         DataPage colCIdPage = readNextPage(colCIdDesc, pageReadStore);
@@ -566,10 +618,11 @@ public class TestDataPageChecksums {
     Path refPath = writeNestedWithNullsSampleParquetFile(conf, true, CompressionCodecName.SNAPPY, version);
 
     try (ParquetFileReader refReader =
-      getParquetFileReader(refPath, conf, Collections.singletonList(colDValDesc))) {
+        getParquetFileReader(refPath, conf, Collections.singletonList(colDValDesc))) {
       PageReadStore refPageReadStore = refReader.readNextRowGroup();
       // Read (decompressed) dictionary page
-      byte[] dictPageBytes = readDictPage(colDValDesc, refPageReadStore).getBytes().toByteArray();
+      byte[] dictPageBytes =
+          readDictPage(colDValDesc, refPageReadStore).getBytes().toByteArray();
       byte[] colDValPageBytes = getPageBytes(readNextPage(colDValDesc, refPageReadStore));
 
       // Write out sample file with checksums
@@ -577,8 +630,7 @@ public class TestDataPageChecksums {
       conf.setBoolean(ParquetInputFormat.PAGE_VERIFY_CHECKSUM_ENABLED, true);
       Path path = writeNestedWithNullsSampleParquetFile(conf, true, CompressionCodecName.SNAPPY, version);
 
-      try (ParquetFileReader reader =
-        getParquetFileReader(path, conf, Collections.singletonList(colDValDesc))) {
+      try (ParquetFileReader reader = getParquetFileReader(path, conf, Collections.singletonList(colDValDesc))) {
         PageReadStore pageReadStore = reader.readNextRowGroup();
 
         DictionaryPage dictPage = readDictPage(colDValDesc, pageReadStore);
@@ -602,7 +654,9 @@ public class TestDataPageChecksums {
     testDictionaryEncoding(ParquetProperties.WriterVersion.PARQUET_2_0);
   }
 
-  /** Compress using snappy */
+  /**
+   * Compress using snappy
+   */
   private byte[] snappy(byte[] bytes, int offset) throws IOException {
     int length = bytes.length - offset;
     SnappyCompressor compressor = new SnappyCompressor();
@@ -611,8 +665,10 @@ public class TestDataPageChecksums {
     compressor.finish();
     byte[] buffer = new byte[length * 2];
     int compressedSize = compressor.compress(buffer, 0, buffer.length);
-    return BytesInput.concat(BytesInput.from(Arrays.copyOfRange(bytes, 0, offset)),
-      BytesInput.from(Arrays.copyOfRange(buffer, 0, compressedSize))).toByteArray();
+    return BytesInput.concat(
+            BytesInput.from(Arrays.copyOfRange(bytes, 0, offset)),
+            BytesInput.from(Arrays.copyOfRange(buffer, 0, compressedSize)))
+        .toByteArray();
   }
 
   private byte[] snappy(byte[] bytes) throws IOException {
@@ -621,28 +677,37 @@ public class TestDataPageChecksums {
 
   private int getDataOffset(Page page) {
     if (page instanceof DataPageV2) {
-      return (int) (((DataPageV2) page).getRepetitionLevels().size() +
-        ((DataPageV2) page).getDefinitionLevels().size());
+      return (int) (((DataPageV2) page).getRepetitionLevels().size()
+          + ((DataPageV2) page).getDefinitionLevels().size());
     } else {
       return 0;
     }
   }
 
-  /** Construct ParquetFileReader for input file and columns */
-  private ParquetFileReader getParquetFileReader(Path path, Configuration conf,
-                                                 List<ColumnDescriptor> columns)
-    throws IOException {
-    ParquetMetadata footer = ParquetFileReader.readFooter(conf, path);
-    return new ParquetFileReader(conf, footer.getFileMetaData(), path,
-      footer.getBlocks(), columns);
+  /**
+   * Construct ParquetFileReader for input file and columns
+   */
+  private ParquetFileReader getParquetFileReader(Path path, Configuration conf, List<ColumnDescriptor> columns)
+      throws IOException {
+    HadoopInputFile inputFile = HadoopInputFile.fromPath(path, conf);
+    SeekableInputStream inputStream = inputFile.newStream();
+    ParquetReadOptions readOptions = HadoopReadOptions.builder(conf).build();
+    ParquetMetadata footer = ParquetFileReader.readFooter(inputFile, readOptions, inputStream);
+    ParquetFileReader reader = ParquetFileReader.open(inputFile, footer, readOptions, inputStream);
+    reader.setRequestedSchema(columns);
+    return reader;
   }
 
-  /** Read the dictionary page for the column */
+  /**
+   * Read the dictionary page for the column
+   */
   private DictionaryPage readDictPage(ColumnDescriptor colDesc, PageReadStore pageReadStore) {
     return pageReadStore.getPageReader(colDesc).readDictionaryPage();
   }
 
-  /** Read the next page for a column */
+  /**
+   * Read the next page for a column
+   */
   private DataPage readNextPage(ColumnDescriptor colDesc, PageReadStore pageReadStore) {
     return pageReadStore.getPageReader(colDesc).readPage();
   }
@@ -651,8 +716,7 @@ public class TestDataPageChecksums {
    * Compare the extracted (decompressed) bytes to the reference bytes
    */
   private void assertCorrectContent(byte[] pageBytes, byte[] referenceBytes) {
-    assertArrayEquals("Read page content was different from expected page content", referenceBytes,
-      pageBytes);
+    assertArrayEquals("Read page content was different from expected page content", referenceBytes, pageBytes);
   }
 
   private byte[] getPageBytes(DataPage page) throws IOException {
@@ -661,10 +725,11 @@ public class TestDataPageChecksums {
       return pageV1.getBytes().toByteArray();
     } else if (page instanceof DataPageV2) {
       DataPageV2 pageV2 = (DataPageV2) page;
-      return BytesInput.concat(
-        pageV2.getRepetitionLevels(), pageV2.getDefinitionLevels(), pageV2.getData()).toByteArray();
+      return BytesInput.concat(pageV2.getRepetitionLevels(), pageV2.getDefinitionLevels(), pageV2.getData())
+          .toByteArray();
     } else {
-      throw new IllegalArgumentException("Unknown page type " + page.getClass().getName());
+      throw new IllegalArgumentException(
+          "Unknown page type " + page.getClass().getName());
     }
   }
 
@@ -677,11 +742,15 @@ public class TestDataPageChecksums {
     int crcFromPage = page.getCrc().getAsInt();
     crc.reset();
     crc.update(referenceBytes);
-    assertEquals("Checksum found in page did not match calculated reference checksum",
-      crc.getValue(), (long) crcFromPage & 0xffffffffL);
+    assertEquals(
+        "Checksum found in page did not match calculated reference checksum",
+        crc.getValue(),
+        (long) crcFromPage & 0xffffffffL);
   }
 
-  /** Verify that the crc is not set */
+  /**
+   * Verify that the crc is not set
+   */
   private void assertCrcNotSet(Page page) {
     assertFalse("Checksum was set in page", page.getCrc().isPresent());
   }
@@ -696,8 +765,9 @@ public class TestDataPageChecksums {
       fail("Expected checksum verification exception to be thrown");
     } catch (Exception e) {
       assertTrue("Thrown exception is of incorrect type", e instanceof ParquetDecodingException);
-      assertTrue("Did not catch checksum verification ParquetDecodingException",
-        e.getMessage().contains("CRC checksum verification failed"));
+      assertTrue(
+          "Did not catch checksum verification ParquetDecodingException",
+          e.getMessage().contains("CRC checksum verification failed"));
     }
   }
 }
