@@ -18,8 +18,40 @@
  */
 package org.apache.parquet.hadoop.rewrite;
 
+import static java.util.Collections.emptyMap;
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.BINARY;
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.DOUBLE;
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.FLOAT;
+import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.INT64;
+import static org.apache.parquet.schema.Type.Repetition.OPTIONAL;
+import static org.apache.parquet.schema.Type.Repetition.REPEATED;
+import static org.apache.parquet.schema.Type.Repetition.REQUIRED;
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
+
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.BiFunction;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
 import org.apache.parquet.HadoopReadOptions;
@@ -27,6 +59,8 @@ import org.apache.parquet.ParquetReadOptions;
 import org.apache.parquet.Version;
 import org.apache.parquet.column.ParquetProperties;
 import org.apache.parquet.column.values.bloomfilter.BloomFilter;
+import org.apache.parquet.conf.ParquetConfiguration;
+import org.apache.parquet.conf.PlainParquetConfiguration;
 import org.apache.parquet.crypto.FileDecryptionProperties;
 import org.apache.parquet.crypto.FileEncryptionProperties;
 import org.apache.parquet.crypto.ParquetCipher;
@@ -52,11 +86,13 @@ import org.apache.parquet.hadoop.util.CompressionConverter.TransParquetFileReade
 import org.apache.parquet.hadoop.util.EncDecProperties;
 import org.apache.parquet.hadoop.util.EncryptionTestFile;
 import org.apache.parquet.hadoop.util.HadoopInputFile;
+import org.apache.parquet.hadoop.util.HadoopOutputFile;
 import org.apache.parquet.hadoop.util.TestFileBuilder;
 import org.apache.parquet.internal.column.columnindex.ColumnIndex;
 import org.apache.parquet.internal.column.columnindex.OffsetIndex;
 import org.apache.parquet.io.InputFile;
 import org.apache.parquet.io.InvalidRecordException;
+import org.apache.parquet.io.OutputFile;
 import org.apache.parquet.io.SeekableInputStream;
 import org.apache.parquet.schema.GroupType;
 import org.apache.parquet.schema.InvalidSchemaException;
@@ -68,84 +104,98 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.BINARY;
-import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.DOUBLE;
-import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.FLOAT;
-import static org.apache.parquet.schema.PrimitiveType.PrimitiveTypeName.INT64;
-import static org.apache.parquet.schema.Type.Repetition.OPTIONAL;
-import static org.apache.parquet.schema.Type.Repetition.REPEATED;
-import static org.apache.parquet.schema.Type.Repetition.REQUIRED;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
-
 @RunWith(Parameterized.class)
 public class ParquetRewriterTest {
 
-  private final int numRecord = 100000;
-  private final Configuration conf = new Configuration();
+  private final int numRecord;
+  private final Configuration conf;
+  private final ParquetConfiguration parquetConf = new PlainParquetConfiguration();
   private final ParquetProperties.WriterVersion writerVersion;
   private final IndexCache.CacheStrategy indexCacheStrategy;
+  private final boolean usingHadoop;
 
-  private List<EncryptionTestFile> inputFiles = null;
+  private List<EncryptionTestFile> inputFiles = Lists.newArrayList();
+  private List<EncryptionTestFile> inputFilesToJoin = Lists.newArrayList();
   private String outputFile = null;
   private ParquetRewriter rewriter = null;
 
-  @Parameterized.Parameters(name = "WriterVersion = {0}, IndexCacheStrategy = {1}")
+  private final EncryptionTestFile gzipEncryptionTestFileWithoutBloomFilterColumn;
+  private final EncryptionTestFile uncompressedEncryptionTestFileWithoutBloomFilterColumn;
+
+  @Parameterized.Parameters(
+      name =
+          "WriterVersion = {0}, IndexCacheStrategy = {1}, UsingHadoop = {2}, numRecord = {3}, rowsPerPage = {4}")
   public static Object[][] parameters() {
-    return new Object[][] {{"v1", "NONE"}, {"v1", "PREFETCH_BLOCK"}, {"v2", "NONE"}, {"v2", "PREFETCH_BLOCK"}};
+    final int DefaultNumRecord = 10000;
+    final int DefaultRowsPerPage = DefaultNumRecord / 5;
+    return new Object[][] {
+      {"v1", "NONE", true, DefaultNumRecord, DefaultRowsPerPage},
+      {"v1", "PREFETCH_BLOCK", true, DefaultNumRecord, DefaultRowsPerPage},
+      {"v2", "PREFETCH_BLOCK", true, DefaultNumRecord, DefaultRowsPerPage},
+      {"v2", "PREFETCH_BLOCK", false, DefaultNumRecord, DefaultRowsPerPage}
+    };
   }
 
-  public ParquetRewriterTest(String writerVersion, String indexCacheStrategy) {
+  public ParquetRewriterTest(
+      String writerVersion, String indexCacheStrategy, boolean _usingHadoop, int _numRecord, int rowsPerPage)
+      throws IOException {
     this.writerVersion = ParquetProperties.WriterVersion.fromString(writerVersion);
     this.indexCacheStrategy = IndexCache.CacheStrategy.valueOf(indexCacheStrategy);
+    this.usingHadoop = _usingHadoop;
+    this.numRecord = _numRecord;
+
+    Configuration _conf = new Configuration();
+    _conf.set("parquet.page.row.count.limit", Integer.toString(rowsPerPage));
+    this.conf = _conf;
+
+    MessageType testSchema = createSchema();
+    this.gzipEncryptionTestFileWithoutBloomFilterColumn = new TestFileBuilder(conf, testSchema)
+        .withNumRecord(numRecord)
+        .withCodec("GZIP")
+        .withPageSize(1024)
+        .withWriterVersion(this.writerVersion)
+        .build();
+
+    this.uncompressedEncryptionTestFileWithoutBloomFilterColumn = new TestFileBuilder(conf, testSchema)
+        .withNumRecord(numRecord)
+        .withCodec("UNCOMPRESSED")
+        .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+        .withWriterVersion(this.writerVersion)
+        .build();
   }
 
   private void testPruneSingleColumnTranslateCodec(List<Path> inputPaths) throws Exception {
-    Path outputPath = new Path(outputFile);
-    List<String> pruneColumns = Arrays.asList("Gender");
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
+
+    List<String> pruneColumns = Collections.singletonList("Gender");
     CompressionCodecName newCodec = CompressionCodecName.ZSTD;
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
-    RewriteOptions options =
-      builder.prune(pruneColumns).transform(newCodec).indexCacheStrategy(indexCacheStrategy).build();
+    RewriteOptions options = builder.prune(pruneColumns)
+        .transform(newCodec)
+        .indexCacheStrategy(indexCacheStrategy)
+        .build();
 
     rewriter = new ParquetRewriter(options);
     rewriter.processBlocks();
     rewriter.close();
 
-    // Verify the schema are not changed for the columns not pruned
-    validateSchema();
+    // Verify the schema is not changed for the columns not pruned
+    validateSchemaWithGenderColumnPruned(false);
 
     // Verify codec has been translated
-    verifyCodec(outputFile, new HashSet<CompressionCodecName>() {{
-      add(CompressionCodecName.ZSTD);
-    }}, null);
+    verifyCodec(
+        outputFile,
+        new HashSet<CompressionCodecName>() {
+          {
+            add(CompressionCodecName.ZSTD);
+          }
+        },
+        null);
 
     // Verify the data are not changed for the columns not pruned
-    validateColumnData(new HashSet<>(pruneColumns), Collections.emptySet(), null);
+    validateColumnData(new HashSet<>(pruneColumns), Collections.emptySet(), null, false, emptyMap());
 
     // Verify the page index
-    validatePageIndex(new HashMap<Integer, Integer>() {{
-      put(0, 0);
-      put(1, 1);
-      put(2, 3);
-      put(3, 4);
-    }});
+    validatePageIndex(new HashSet<>(), false, emptyMap());
 
     // Verify original.created.by is preserved
     validateCreatedBy();
@@ -155,58 +205,68 @@ public class ParquetRewriterTest {
   @Before
   public void setUp() {
     outputFile = TestFileBuilder.createTempFile("test");
+    inputFilesToJoin = new ArrayList<>();
   }
 
   @Test
   public void testPruneSingleColumnTranslateCodecSingleFile() throws Exception {
-    testSingleInputFileSetup("GZIP");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    addGzipInputFile();
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneSingleColumnTranslateCodec(inputPaths);
   }
 
   @Test
   public void testPruneSingleColumnTranslateCodecTwoFiles() throws Exception {
-    testMultipleInputFilesSetup();
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-      add(new Path(inputFiles.get(1).getFileName()));
-    }};
+    addGzipInputFile();
+    addUncompressedInputFile();
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+        add(new Path(inputFiles.get(1).getFileName()));
+      }
+    };
     testPruneSingleColumnTranslateCodec(inputPaths);
   }
 
   private void testPruneNullifyTranslateCodec(List<Path> inputPaths) throws Exception {
-    Path outputPath = new Path(outputFile);
-    List<String> pruneColumns = Arrays.asList("Gender");
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
+
+    List<String> pruneColumns = Collections.singletonList("Gender");
     Map<String, MaskMode> maskColumns = new HashMap<>();
     maskColumns.put("Links.Forward", MaskMode.NULLIFY);
     CompressionCodecName newCodec = CompressionCodecName.ZSTD;
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
-    RewriteOptions options =
-      builder.prune(pruneColumns).mask(maskColumns).transform(newCodec).indexCacheStrategy(indexCacheStrategy).build();
+    RewriteOptions options = builder.prune(pruneColumns)
+        .mask(maskColumns)
+        .transform(newCodec)
+        .indexCacheStrategy(indexCacheStrategy)
+        .build();
 
     rewriter = new ParquetRewriter(options);
     rewriter.processBlocks();
     rewriter.close();
 
     // Verify the schema are not changed for the columns not pruned
-    validateSchema();
+    validateSchemaWithGenderColumnPruned(false);
 
     // Verify codec has been translated
-    verifyCodec(outputFile, new HashSet<CompressionCodecName>() {{
-      add(newCodec);
-    }}, null);
+    verifyCodec(
+        outputFile,
+        new HashSet<CompressionCodecName>() {
+          {
+            add(newCodec);
+          }
+        },
+        null);
 
     // Verify the data are not changed for the columns not pruned
-    validateColumnData(new HashSet<>(pruneColumns), maskColumns.keySet(), null);
+    validateColumnData(new HashSet<>(pruneColumns), maskColumns.keySet(), null, false, emptyMap());
 
     // Verify the page index
-    validatePageIndex(new HashMap<Integer, Integer>() {{
-      put(0, 0);
-      put(1, 1);
-      put(2, 3);
-    }});
+    validatePageIndex(ImmutableSet.of("Links.Forward"), false, emptyMap());
 
     // Verify original.created.by is preserved
     validateCreatedBy();
@@ -215,29 +275,35 @@ public class ParquetRewriterTest {
 
   @Test
   public void testPruneNullifyTranslateCodecSingleFile() throws Exception {
-    testSingleInputFileSetup("GZIP");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    addGzipInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneNullifyTranslateCodec(inputPaths);
   }
 
   @Test
   public void testPruneNullifyTranslateCodecTwoFiles() throws Exception {
-    testMultipleInputFilesSetup();
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-      add(new Path(inputFiles.get(1).getFileName()));
-    }};
+    addGzipInputFile();
+    addUncompressedInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+        add(new Path(inputFiles.get(1).getFileName()));
+      }
+    };
     testPruneNullifyTranslateCodec(inputPaths);
   }
 
   private void testPruneEncryptTranslateCodec(List<Path> inputPaths) throws Exception {
-    Path outputPath = new Path(outputFile);
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
 
     // Prune
-    List<String> pruneColumns = Arrays.asList("Gender");
+    List<String> pruneColumns = Collections.singletonList("Gender");
     builder.prune(pruneColumns);
 
     // Translate codec
@@ -247,8 +313,8 @@ public class ParquetRewriterTest {
     // Encrypt
     String[] encryptColumns = {"DocId"};
     FileEncryptionProperties fileEncryptionProperties =
-            EncDecProperties.getFileEncryptionProperties(encryptColumns, ParquetCipher.AES_GCM_CTR_V1, false);
-    builder.encrypt(Arrays.asList(encryptColumns)).encryptionProperties(fileEncryptionProperties);
+        EncDecProperties.getFileEncryptionProperties(encryptColumns, ParquetCipher.AES_GCM_CTR_V1, false);
+    builder.encrypt(List.of(encryptColumns)).encryptionProperties(fileEncryptionProperties);
 
     builder.indexCacheStrategy(indexCacheStrategy);
 
@@ -257,23 +323,29 @@ public class ParquetRewriterTest {
     rewriter.processBlocks();
     rewriter.close();
 
-    // Verify the schema are not changed for the columns not pruned
-    validateSchema();
+    // Verify the schema is not changed for the columns not pruned
+    validateSchemaWithGenderColumnPruned(false);
 
     // Verify codec has been translated
     FileDecryptionProperties fileDecryptionProperties = EncDecProperties.getFileDecryptionProperties();
-    verifyCodec(outputFile, new HashSet<CompressionCodecName>() {{
-      add(newCodec);
-    }}, fileDecryptionProperties);
+    verifyCodec(
+        outputFile,
+        new HashSet<CompressionCodecName>() {
+          {
+            add(newCodec);
+          }
+        },
+        fileDecryptionProperties);
 
     // Verify the data are not changed for the columns not pruned
-    validateColumnData(new HashSet<>(pruneColumns), Collections.emptySet(), fileDecryptionProperties);
+    validateColumnData(
+        new HashSet<>(pruneColumns), Collections.emptySet(), fileDecryptionProperties, false, emptyMap());
 
     // Verify column encryption
     ParquetMetadata metaData = getFileMetaData(outputFile, fileDecryptionProperties);
-    assertTrue(metaData.getBlocks().size() > 0);
+    assertFalse(metaData.getBlocks().isEmpty());
     List<ColumnChunkMetaData> columns = metaData.getBlocks().get(0).getColumns();
-    Set<String> set = new HashSet<>(Arrays.asList(encryptColumns));
+    Set<String> set = new HashSet<>(List.of(encryptColumns));
     for (ColumnChunkMetaData column : columns) {
       if (set.contains(column.getPath().toDotString())) {
         assertTrue(column.isEncrypted());
@@ -289,33 +361,45 @@ public class ParquetRewriterTest {
 
   @Test
   public void testPruneEncryptTranslateCodecSingleFile() throws Exception {
-    testSingleInputFileSetup("GZIP");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    addGzipInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneEncryptTranslateCodec(inputPaths);
   }
 
   @Test
   public void testPruneEncryptTranslateCodecTwoFiles() throws Exception {
-    testMultipleInputFilesSetup();
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-      add(new Path(inputFiles.get(1).getFileName()));
-    }};
+    addGzipInputFile();
+    addUncompressedInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+        add(new Path(inputFiles.get(1).getFileName()));
+      }
+    };
     testPruneEncryptTranslateCodec(inputPaths);
   }
 
   @Test
   public void testRewriteWithoutColumnIndexes() throws Exception {
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(ParquetRewriterTest.class.getResource("/test-file-with-no-column-indexes-1.parquet").toURI()));
-    }};
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(ParquetRewriterTest.class
+            .getResource("/test-file-with-no-column-indexes-1.parquet")
+            .toURI()));
+      }
+    };
 
-    inputFiles = inputPaths.stream().map(p -> new EncryptionTestFile(p.toString(), null)).collect(Collectors.toList());
+    inputFiles = inputPaths.stream()
+        .map(p -> new EncryptionTestFile(p.toString(), null))
+        .collect(Collectors.toList());
 
-    Path outputPath = new Path(outputFile);
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
 
     Map<String, MaskMode> maskCols = Maps.newHashMap();
     maskCols.put("location.lat", MaskMode.NULLIFY);
@@ -324,14 +408,17 @@ public class ParquetRewriterTest {
 
     List<String> pruneCols = Lists.newArrayList("phoneNumbers");
 
-    RewriteOptions options =
-      builder.mask(maskCols).prune(pruneCols).indexCacheStrategy(indexCacheStrategy).build();
+    RewriteOptions options = builder.mask(maskCols)
+        .prune(pruneCols)
+        .indexCacheStrategy(indexCacheStrategy)
+        .build();
     rewriter = new ParquetRewriter(options);
     rewriter.processBlocks();
     rewriter.close();
 
-    // Verify the schema are not changed for the columns not pruned
-    ParquetMetadata pmd = ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
+    // Verify the schema is not changed for the columns not pruned
+    ParquetMetadata pmd =
+        ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
     MessageType schema = pmd.getFileMetaData().getSchema();
     List<Type> fields = schema.getFields();
     assertEquals(fields.size(), 3);
@@ -343,11 +430,14 @@ public class ParquetRewriterTest {
     assertEquals(subFields.get(0).getName(), "lon");
     assertEquals(subFields.get(1).getName(), "lat");
 
-    try(ParquetReader<Group> outReader = ParquetReader.builder(new GroupReadSupport(), new Path(outputFile)).withConf(conf).build();
-        ParquetReader<Group> inReader = ParquetReader.builder(new GroupReadSupport(), inputPaths.get(0)).withConf(conf).build();
-    ) {
+    try (ParquetReader<Group> outReader = ParquetReader.builder(new GroupReadSupport(), new Path(outputFile))
+            .withConf(conf)
+            .build();
+        ParquetReader<Group> inReader = ParquetReader.builder(new GroupReadSupport(), inputPaths.get(0))
+            .withConf(conf)
+            .build(); ) {
 
-      for(Group inRead = inReader.read(), outRead = outReader.read();
+      for (Group inRead = inReader.read(), outRead = outReader.read();
           inRead != null || outRead != null;
           inRead = inReader.read(), outRead = outReader.read()) {
         assertNotNull(inRead);
@@ -356,14 +446,17 @@ public class ParquetRewriterTest {
         assertEquals(inRead.getLong("id", 0), outRead.getLong("id", 0));
         assertEquals(inRead.getString("name", 0), outRead.getString("name", 0));
 
-        // location was nulled
+        // location was null
         Group finalOutRead = outRead;
-        assertThrows(RuntimeException.class, () -> finalOutRead.getGroup("location", 0).getDouble("lat", 0));
-        assertThrows(RuntimeException.class, () -> finalOutRead.getGroup("location", 0).getDouble("lon", 0));
+        assertThrows(
+            RuntimeException.class,
+            () -> finalOutRead.getGroup("location", 0).getDouble("lat", 0));
+        assertThrows(
+            RuntimeException.class,
+            () -> finalOutRead.getGroup("location", 0).getDouble("lon", 0));
 
-        // phonenumbers was pruned
+        // phone numbers was pruned
         assertThrows(InvalidRecordException.class, () -> finalOutRead.getGroup("phoneNumbers", 0));
-
       }
     }
 
@@ -374,20 +467,20 @@ public class ParquetRewriterTest {
 
   private void testNullifyAndEncryptColumn(List<Path> inputPaths) throws Exception {
     Map<String, MaskMode> maskColumns = new HashMap<>();
-    maskColumns.put("DocId", MaskMode.NULLIFY);
+    maskColumns.put("Links.Forward", MaskMode.NULLIFY);
 
     String[] encryptColumns = {"DocId"};
-    FileEncryptionProperties fileEncryptionProperties = EncDecProperties.getFileEncryptionProperties(
-            encryptColumns, ParquetCipher.AES_GCM_CTR_V1, false);
+    FileEncryptionProperties fileEncryptionProperties =
+        EncDecProperties.getFileEncryptionProperties(encryptColumns, ParquetCipher.AES_GCM_CTR_V1, false);
 
-    Path outputPath = new Path(outputFile);
-    RewriteOptions options = new RewriteOptions.Builder(conf, inputPaths, outputPath)
-      .mask(maskColumns)
-      .transform(CompressionCodecName.ZSTD)
-      .encrypt(Arrays.asList(encryptColumns))
-      .encryptionProperties(fileEncryptionProperties)
-      .indexCacheStrategy(indexCacheStrategy)
-      .build();
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
+
+    RewriteOptions options = builder.mask(maskColumns)
+        .transform(CompressionCodecName.ZSTD)
+        .encrypt(List.of(encryptColumns))
+        .encryptionProperties(fileEncryptionProperties)
+        .indexCacheStrategy(indexCacheStrategy)
+        .build();
 
     rewriter = new ParquetRewriter(options);
     rewriter.processBlocks();
@@ -396,26 +489,26 @@ public class ParquetRewriterTest {
     FileDecryptionProperties fileDecryptionProperties = EncDecProperties.getFileDecryptionProperties();
 
     // Verify codec has not been changed
-    verifyCodec(outputFile, new HashSet<CompressionCodecName>() {{
-      add(CompressionCodecName.ZSTD);
-    }}, fileDecryptionProperties);
+    verifyCodec(
+        outputFile,
+        new HashSet<CompressionCodecName>() {
+          {
+            add(CompressionCodecName.ZSTD);
+          }
+        },
+        fileDecryptionProperties);
 
     // Verify the data are not changed for non-encrypted and non-masked columns.
     // Also make sure the masked column is nullified.
-    validateColumnData(Collections.emptySet(), maskColumns.keySet(), fileDecryptionProperties);
+    validateColumnData(Collections.emptySet(), maskColumns.keySet(), fileDecryptionProperties, false, emptyMap());
 
     // Verify the page index
-    validatePageIndex(new HashMap<Integer, Integer>() {{
-      put(1, 1);
-      put(2, 2);
-      put(3, 3);
-      put(4, 4);
-    }});
+    validatePageIndex(ImmutableSet.of("DocId", "Links.Forward"), false, emptyMap());
 
     // Verify the column is encrypted
     ParquetMetadata metaData = getFileMetaData(outputFile, fileDecryptionProperties);
-    assertTrue(metaData.getBlocks().size() > 0);
-    Set<String> encryptedColumns = new HashSet<>(Arrays.asList(encryptColumns));
+    assertFalse(metaData.getBlocks().isEmpty());
+    Set<String> encryptedColumns = new HashSet<>(List.of(encryptColumns));
     for (BlockMetaData blockMetaData : metaData.getBlocks()) {
       List<ColumnChunkMetaData> columns = blockMetaData.getColumns();
       for (ColumnChunkMetaData column : columns) {
@@ -430,103 +523,217 @@ public class ParquetRewriterTest {
 
   @Test
   public void testNullifyEncryptSingleFile() throws Exception {
-    testSingleInputFileSetup("GZIP");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    addGzipInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testNullifyAndEncryptColumn(inputPaths);
   }
 
   @Test
   public void testNullifyEncryptTwoFiles() throws Exception {
-    testMultipleInputFilesSetup();
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-      add(new Path(inputFiles.get(1).getFileName()));
-    }};
+    addGzipInputFile();
+    addUncompressedInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+        add(new Path(inputFiles.get(1).getFileName()));
+      }
+    };
     testNullifyAndEncryptColumn(inputPaths);
   }
 
   @Test
   public void testMergeTwoFilesOnly() throws Exception {
-    testMultipleInputFilesSetup();
+    addGzipInputFile();
+    addUncompressedInputFile();
 
     // Only merge two files but do not change anything.
     List<Path> inputPaths = new ArrayList<>();
     for (EncryptionTestFile inputFile : inputFiles) {
       inputPaths.add(new Path(inputFile.getFileName()));
     }
-    Path outputPath = new Path(outputFile);
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
     RewriteOptions options = builder.indexCacheStrategy(indexCacheStrategy).build();
 
     rewriter = new ParquetRewriter(options);
     rewriter.processBlocks();
     rewriter.close();
 
-    // Verify the schema are not changed
-    ParquetMetadata pmd = ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
+    // Verify the schema is not changed
+    ParquetMetadata pmd =
+        ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
     MessageType schema = pmd.getFileMetaData().getSchema();
     MessageType expectSchema = createSchema();
     assertEquals(expectSchema, schema);
 
     // Verify codec has not been translated
-    verifyCodec(outputFile, new HashSet<CompressionCodecName>() {{
-      add(CompressionCodecName.GZIP);
-      add(CompressionCodecName.UNCOMPRESSED);
-    }}, null);
+    verifyCodec(
+        outputFile,
+        new HashSet<CompressionCodecName>() {
+          {
+            add(CompressionCodecName.GZIP);
+            add(CompressionCodecName.UNCOMPRESSED);
+          }
+        },
+        null);
 
     // Verify the merged data are not changed
-    validateColumnData(Collections.emptySet(), Collections.emptySet(), null);
+    validateColumnData(Collections.emptySet(), Collections.emptySet(), null, false, emptyMap());
 
     // Verify the page index
-    validatePageIndex(new HashMap<Integer, Integer>() {{
-      put(0, 0);
-      put(1, 1);
-      put(2, 2);
-      put(3, 3);
-      put(4, 4);
-    }});
+    validatePageIndex(new HashSet<>(), false, emptyMap());
 
     // Verify original.created.by is preserved
     validateCreatedBy();
     validateRowGroupRowCount();
   }
 
+  @Test
+  public void testMergeTwoFilesOnlyRenameColumn() throws Exception {
+    addGzipInputFile();
+    addUncompressedInputFile();
+
+    Map<String, String> renameColumns = ImmutableMap.of("Name", "NameRenamed");
+    List<String> pruneColumns = ImmutableList.of("Gender");
+    String[] encryptColumns = {"DocId"};
+    FileEncryptionProperties fileEncryptionProperties =
+        EncDecProperties.getFileEncryptionProperties(encryptColumns, ParquetCipher.AES_GCM_CTR_V1, false);
+    List<Path> inputPaths =
+        inputFiles.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList());
+    RewriteOptions.Builder builder = createBuilder(inputPaths);
+    RewriteOptions options = builder.indexCacheStrategy(indexCacheStrategy)
+        .renameColumns(ImmutableMap.of("Name", "NameRenamed"))
+        .prune(pruneColumns)
+        .transform(CompressionCodecName.SNAPPY)
+        .encrypt(List.of(encryptColumns))
+        .encryptionProperties(fileEncryptionProperties)
+        .build();
+
+    rewriter = new ParquetRewriter(options);
+    rewriter.processBlocks();
+    rewriter.close();
+
+    FileDecryptionProperties fileDecryptionProperties = EncDecProperties.getFileDecryptionProperties();
+
+    // Verify the schema is not changed
+    ParquetMetadata pmd =
+        ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
+    MessageType schema = pmd.getFileMetaData().getSchema();
+    MessageType expectSchema = createSchemaWithRenamed();
+    assertEquals(expectSchema, schema);
+
+    verifyCodec(outputFile, ImmutableSet.of(CompressionCodecName.SNAPPY), fileDecryptionProperties); // Verify codec
+    // Verify the merged data are not changed
+    validateColumnData(
+        new HashSet<>(pruneColumns), Collections.emptySet(), fileDecryptionProperties, false, renameColumns);
+    validatePageIndex(ImmutableSet.of("DocId"), false, renameColumns); // Verify the page index
+    validateCreatedBy(); // Verify original.created.by is preserved
+    validateRowGroupRowCount();
+
+    ParquetMetadata metaData = getFileMetaData(outputFile, fileDecryptionProperties);
+    assertFalse(metaData.getBlocks().isEmpty());
+    Set<String> encryptedColumns = new HashSet<>(List.of(encryptColumns));
+    for (BlockMetaData blockMetaData : metaData.getBlocks()) {
+      List<ColumnChunkMetaData> columns = blockMetaData.getColumns();
+      for (ColumnChunkMetaData column : columns) {
+        if (encryptedColumns.contains(column.getPath().toDotString())) {
+          assertTrue(column.isEncrypted());
+        } else {
+          assertFalse(column.isEncrypted());
+        }
+      }
+    }
+  }
+
   @Test(expected = InvalidSchemaException.class)
   public void testMergeTwoFilesWithDifferentSchema() throws Exception {
-    MessageType schema1 = new MessageType("schema",
-      new PrimitiveType(OPTIONAL, INT64, "DocId"),
-      new PrimitiveType(REQUIRED, BINARY, "Name"),
-      new PrimitiveType(OPTIONAL, BINARY, "Gender"),
-      new GroupType(OPTIONAL, "Links",
-        new PrimitiveType(REPEATED, BINARY, "Backward"),
-        new PrimitiveType(REPEATED, BINARY, "Forward")));
-    MessageType schema2 = new MessageType("schema",
-      new PrimitiveType(OPTIONAL, INT64, "DocId"),
-      new PrimitiveType(REQUIRED, BINARY, "Name"),
-      new PrimitiveType(OPTIONAL, BINARY, "Gender"));
+    testMergeTwoFilesWithDifferentSchemaSetup(true, null, null);
+  }
+
+  @Test(expected = InvalidSchemaException.class)
+  public void testMergeTwoFilesToJoinWithDifferentSchema() throws Exception {
+    testMergeTwoFilesWithDifferentSchemaSetup(false, null, null);
+  }
+
+  @Test(expected = IllegalArgumentException.class)
+  public void testMergeTwoFilesWithWrongDestinationRenamedColumn() throws Exception {
+    testMergeTwoFilesWithDifferentSchemaSetup(
+        null, ImmutableMap.of("WrongColumnName", "WrongColumnNameRenamed"), null);
+  }
+
+  @Test(expected = IllegalArgumentException.class)
+  public void testMergeTwoFilesWithWrongSourceRenamedColumn() throws Exception {
+    testMergeTwoFilesWithDifferentSchemaSetup(null, ImmutableMap.of("Name", "DocId"), null);
+  }
+
+  @Test(expected = IllegalArgumentException.class)
+  public void testMergeTwoFilesNullifyAndRenamedSameColumn() throws Exception {
+    testMergeTwoFilesWithDifferentSchemaSetup(
+        null, ImmutableMap.of("Name", "NameRenamed"), ImmutableMap.of("Name", MaskMode.NULLIFY));
+  }
+
+  public void testMergeTwoFilesWithDifferentSchemaSetup(
+      Boolean wrongSchemaInInputFile, Map<String, String> renameColumns, Map<String, MaskMode> maskColumns)
+      throws Exception {
+    MessageType schema1 = new MessageType(
+        "schema",
+        new PrimitiveType(OPTIONAL, INT64, "DocId"),
+        new PrimitiveType(REQUIRED, BINARY, "Name"),
+        new PrimitiveType(OPTIONAL, BINARY, "Gender"),
+        new GroupType(
+            OPTIONAL,
+            "Links",
+            new PrimitiveType(REPEATED, BINARY, "Backward"),
+            new PrimitiveType(REPEATED, BINARY, "Forward")));
+    MessageType schema2 = new MessageType(
+        "schema",
+        new PrimitiveType(OPTIONAL, INT64, "DocId"),
+        new PrimitiveType(REQUIRED, BINARY, "Name"),
+        new PrimitiveType(OPTIONAL, BINARY, "Gender"));
     inputFiles = Lists.newArrayList();
     inputFiles.add(new TestFileBuilder(conf, schema1)
-      .withNumRecord(numRecord)
-      .withCodec("UNCOMPRESSED")
-      .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
-      .withWriterVersion(writerVersion)
-      .build());
-    inputFiles.add(new TestFileBuilder(conf, schema2)
-      .withNumRecord(numRecord)
-      .withCodec("UNCOMPRESSED")
-      .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
-      .withWriterVersion(writerVersion)
-      .build());
-
-    List<Path> inputPaths = new ArrayList<>();
-    for (EncryptionTestFile inputFile : inputFiles) {
-      inputPaths.add(new Path(inputFile.getFileName()));
+        .withNumRecord(numRecord)
+        .withCodec("UNCOMPRESSED")
+        .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+        .withWriterVersion(writerVersion)
+        .build());
+    inputFilesToJoin.add(new TestFileBuilder(conf, schema1)
+        .withNumRecord(numRecord)
+        .withCodec("UNCOMPRESSED")
+        .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+        .withWriterVersion(writerVersion)
+        .build());
+    if (wrongSchemaInInputFile != null) {
+      if (wrongSchemaInInputFile) {
+        inputFiles.add(new TestFileBuilder(conf, schema2)
+            .withNumRecord(numRecord)
+            .withCodec("UNCOMPRESSED")
+            .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+            .withWriterVersion(writerVersion)
+            .build());
+      } else {
+        inputFilesToJoin.add(new TestFileBuilder(conf, schema2)
+            .withNumRecord(numRecord)
+            .withCodec("UNCOMPRESSED")
+            .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+            .withWriterVersion(writerVersion)
+            .build());
+      }
     }
-    Path outputPath = new Path(outputFile);
-    RewriteOptions.Builder builder = new RewriteOptions.Builder(conf, inputPaths, outputPath);
-    RewriteOptions options = builder.indexCacheStrategy(indexCacheStrategy).build();
+
+    RewriteOptions.Builder builder = createBuilder(
+        inputFiles.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList()),
+        inputFilesToJoin.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList()),
+        false);
+    RewriteOptions options = builder.indexCacheStrategy(indexCacheStrategy)
+        .renameColumns(renameColumns)
+        .mask(maskColumns)
+        .build();
 
     // This should throw an exception because the schemas are different
     rewriter = new ParquetRewriter(options);
@@ -534,37 +741,44 @@ public class ParquetRewriterTest {
 
   @Test
   public void testRewriteFileWithMultipleBlocks() throws Exception {
-    testSingleInputFileSetup("GZIP", 1024L);
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    addGzipInputFile();
+
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneSingleColumnTranslateCodec(inputPaths);
   }
 
   @Test
   public void testPruneSingleColumnTranslateCodecAndEnableBloomFilter() throws Exception {
-    testSingleInputFileSetupWithBloomFilter("GZIP", "DocId");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    testSingleInputFileSetupWithBloomFilter("DocId");
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneSingleColumnTranslateCodec(inputPaths);
 
     // Verify bloom filters
-    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters(null);
+    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters();
     Map<ColumnPath, List<BloomFilter>> outputBloomFilters = allOutputBloomFilters(null);
     assertEquals(inputBloomFilters, outputBloomFilters);
   }
 
   @Test
   public void testPruneNullifyTranslateCodecAndEnableBloomFilter() throws Exception {
-    testSingleInputFileSetupWithBloomFilter("GZIP", "DocId", "Links.Forward");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    testSingleInputFileSetupWithBloomFilter("DocId", "Links.Forward");
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneNullifyTranslateCodec(inputPaths);
 
     // Verify bloom filters
-    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters(null);
+    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters();
     assertEquals(inputBloomFilters.size(), 2);
     assertTrue(inputBloomFilters.containsKey(ColumnPath.fromDotString("Links.Forward")));
     assertTrue(inputBloomFilters.containsKey(ColumnPath.fromDotString("DocId")));
@@ -579,14 +793,16 @@ public class ParquetRewriterTest {
 
   @Test
   public void testPruneEncryptTranslateCodecAndEnableBloomFilter() throws Exception {
-    testSingleInputFileSetupWithBloomFilter("GZIP", "DocId", "Links.Forward");
-    List<Path> inputPaths = new ArrayList<Path>() {{
-      add(new Path(inputFiles.get(0).getFileName()));
-    }};
+    testSingleInputFileSetupWithBloomFilter("DocId", "Links.Forward");
+    List<Path> inputPaths = new ArrayList<Path>() {
+      {
+        add(new Path(inputFiles.get(0).getFileName()));
+      }
+    };
     testPruneEncryptTranslateCodec(inputPaths);
 
     // Verify bloom filters
-    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters(null);
+    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters();
 
     // Cannot read without FileDecryptionProperties
     assertThrows(ParquetCryptoRuntimeException.class, () -> allOutputBloomFilters(null));
@@ -596,120 +812,281 @@ public class ParquetRewriterTest {
     assertEquals(inputBloomFilters, outputBloomFilters);
   }
 
-  private void testSingleInputFileSetup(String compression) throws IOException {
-    testSingleInputFileSetup(compression, ParquetWriter.DEFAULT_BLOCK_SIZE);
+  private void testSingleInputFileSetupWithBloomFilter(String... bloomFilterEnabledColumns) throws IOException {
+    testSingleInputFileSetup(bloomFilterEnabledColumns);
   }
 
-  private void testSingleInputFileSetupWithBloomFilter(
-    String compression,
-    String... bloomFilterEnabledColumns) throws IOException {
-    testSingleInputFileSetup(compression, ParquetWriter.DEFAULT_BLOCK_SIZE, bloomFilterEnabledColumns);
-  }
-
-  private void testSingleInputFileSetup(String compression,
-                                        long rowGroupSize,
-                                        String... bloomFilterEnabledColumns) throws IOException {
+  private void testSingleInputFileSetup(String... bloomFilterEnabledColumns) throws IOException {
     MessageType schema = createSchema();
     inputFiles = Lists.newArrayList();
     inputFiles.add(new TestFileBuilder(conf, schema)
-      .withNumRecord(numRecord)
-      .withCodec(compression)
-      .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
-      .withRowGroupSize(rowGroupSize)
-      .withBloomFilterEnabled(bloomFilterEnabledColumns)
-      .withWriterVersion(writerVersion)
-      .build());
+        .withNumRecord(numRecord)
+        .withCodec("GZIP")
+        .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+        .withRowGroupSize(ParquetWriter.DEFAULT_BLOCK_SIZE)
+        .withBloomFilterEnabled(bloomFilterEnabledColumns)
+        .withWriterVersion(writerVersion)
+        .build());
   }
 
-  private void testMultipleInputFilesSetup() throws IOException {
-    MessageType schema = createSchema();
-    inputFiles = Lists.newArrayList();
-    inputFiles.add(new TestFileBuilder(conf, schema)
-      .withNumRecord(numRecord)
-      .withCodec("GZIP")
-      .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
-      .withWriterVersion(writerVersion)
-      .build());
-    inputFiles.add(new TestFileBuilder(conf, schema)
-      .withNumRecord(numRecord)
-      .withCodec("UNCOMPRESSED")
-      .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
-      .withWriterVersion(writerVersion)
-      .build());
+  @Test
+  public void testFilesToJoinHaveDifferentRowCount() throws Exception {
+    MessageType schema1 = new MessageType("schema", new PrimitiveType(OPTIONAL, INT64, "DocId"));
+    MessageType schema2 = new MessageType("schema", new PrimitiveType(REQUIRED, BINARY, "Name"));
+    inputFiles = ImmutableList.of(
+        new TestFileBuilder(conf, schema1).withNumRecord(numRecord).build());
+    inputFilesToJoin = ImmutableList.of(
+        new TestFileBuilder(conf, schema2).withNumRecord(numRecord / 2).build());
+    RewriteOptions.Builder builder = createBuilder(
+        inputFiles.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList()),
+        inputFilesToJoin.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList()),
+        true);
+    RewriteOptions options = builder.build();
+    try {
+      rewriter =
+          new ParquetRewriter(options); // This should throw an exception because the row count is different
+    } catch (RuntimeException e) {
+      assertTrue(e.getMessage().contains("The number of rows in each block must match"));
+    }
+  }
 
+  @Test
+  public void testOneInputFileManyInputFilesToJoinWithJoinColumnsOverwrite() throws Exception {
+    testOneInputFileManyInputFilesToJoinSetup(true);
+  }
+
+  @Test
+  public void testOneInputFileManyInputFilesToJoinWithoutJoinColumnsOverwrite() throws Exception {
+    testOneInputFileManyInputFilesToJoinSetup(false);
+  }
+
+  public void testOneInputFileManyInputFilesToJoinSetup(boolean joinColumnsOverwrite) throws Exception {
+    testOneInputFileManyInputFilesToJoinSetup();
+
+    String encryptColumn = "DocId";
+    String pruneColumn = "Gender";
+
+    FileEncryptionProperties fileEncryptionProperties = EncDecProperties.getFileEncryptionProperties(
+        new String[] {encryptColumn}, ParquetCipher.AES_GCM_CTR_V1, false);
+    FileDecryptionProperties fileDecryptionProperties = EncDecProperties.getFileDecryptionProperties();
+
+    List<Path> inputPathsL =
+        inputFiles.stream().map(x -> new Path(x.getFileName())).collect(Collectors.toList());
+    List<Path> inputPathsR =
+        inputFilesToJoin.stream().map(y -> new Path(y.getFileName())).collect(Collectors.toList());
+    List<String> pruneColumns = ImmutableList.of(pruneColumn);
+    Map<String, MaskMode> maskColumns = ImmutableMap.of(encryptColumn, MaskMode.NULLIFY);
+    RewriteOptions options = createBuilder(inputPathsL, inputPathsR, true)
+        .prune(pruneColumns)
+        .mask(maskColumns)
+        .transform(CompressionCodecName.ZSTD)
+        .indexCacheStrategy(indexCacheStrategy)
+        .overwriteInputWithJoinColumns(joinColumnsOverwrite)
+        .encrypt(ImmutableList.of(encryptColumn))
+        .encryptionProperties(fileEncryptionProperties)
+        .build();
+
+    rewriter = new ParquetRewriter(options);
+    rewriter.processBlocks();
+    rewriter.close();
+
+    Map<ColumnPath, List<BloomFilter>> inputBloomFilters = allInputBloomFilters();
+    Map<ColumnPath, List<BloomFilter>> outputBloomFilters = allOutputBloomFilters(fileDecryptionProperties);
+    Set<ColumnPath> schemaRColumns = createSchemaToJoin().getColumns().stream()
+        .map(x -> ColumnPath.get(x.getPath()))
+        .collect(Collectors.toSet());
+    Set<ColumnPath> rBloomFilters = outputBloomFilters.keySet().stream()
+        .filter(schemaRColumns::contains)
+        .collect(Collectors.toSet());
+
+    // Verify column encryption
+    ParquetMetadata metaData = getFileMetaData(outputFile, fileDecryptionProperties);
+    assertFalse(metaData.getBlocks().isEmpty());
+    List<ColumnChunkMetaData> columns = metaData.getBlocks().get(0).getColumns();
+    Set<String> set = ImmutableSet.of(encryptColumn);
+    for (ColumnChunkMetaData column : columns) {
+      if (set.contains(column.getPath().toDotString())) {
+        assertTrue(column.isEncrypted());
+      } else {
+        assertFalse(column.isEncrypted());
+      }
+    }
+
+    validateColumnData(
+        new HashSet<>(pruneColumns),
+        maskColumns.keySet(),
+        fileDecryptionProperties,
+        joinColumnsOverwrite,
+        emptyMap()); // Verify data
+    validateSchemaWithGenderColumnPruned(true); // Verify schema
+    validateCreatedBy(); // Verify original.created.by
+    assertEquals(inputBloomFilters.keySet(), rBloomFilters); // Verify bloom filters
+    verifyCodec(outputFile, ImmutableSet.of(CompressionCodecName.ZSTD), fileDecryptionProperties); // Verify codec
+    validatePageIndex(ImmutableSet.of(encryptColumn), joinColumnsOverwrite, emptyMap());
+  }
+
+  private void testOneInputFileManyInputFilesToJoinSetup() throws IOException {
+    inputFiles = Lists.newArrayList(new TestFileBuilder(conf, createSchema())
+        .withNumRecord(numRecord)
+        .withRowGroupSize(1 * 1024 * 1024)
+        .withCodec("GZIP")
+        .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+        .withWriterVersion(writerVersion)
+        .build());
+
+    List<Long> rowGroupRowCounts = ParquetFileReader.readFooter(
+            conf, new Path(inputFiles.get(0).getFileName()), ParquetMetadataConverter.NO_FILTER)
+        .getBlocks()
+        .stream()
+        .map(BlockMetaData::getRowCount)
+        .collect(Collectors.toList());
+
+    for (long count : rowGroupRowCounts) {
+      inputFilesToJoin.add(new TestFileBuilder(conf, createSchemaToJoin())
+          .withNumRecord((int) count)
+          .withCodec("UNCOMPRESSED")
+          .withPageSize(ParquetProperties.DEFAULT_PAGE_SIZE)
+          .withWriterVersion(writerVersion)
+          .build());
+    }
   }
 
   private MessageType createSchema() {
-    return new MessageType("schema",
-      new PrimitiveType(OPTIONAL, INT64, "DocId"),
-      new PrimitiveType(REQUIRED, BINARY, "Name"),
-      new PrimitiveType(OPTIONAL, BINARY, "Gender"),
-      new PrimitiveType(REPEATED, FLOAT, "FloatFraction"),
-      new PrimitiveType(OPTIONAL, DOUBLE, "DoubleFraction"),
-      new GroupType(OPTIONAL, "Links",
-        new PrimitiveType(REPEATED, BINARY, "Backward"),
-        new PrimitiveType(REPEATED, BINARY, "Forward")));
+    return new MessageType(
+        "schema",
+        new PrimitiveType(OPTIONAL, INT64, "DocId"),
+        new PrimitiveType(REQUIRED, BINARY, "Name"),
+        new PrimitiveType(OPTIONAL, BINARY, "Gender"),
+        new PrimitiveType(REPEATED, FLOAT, "FloatFraction"),
+        new PrimitiveType(OPTIONAL, DOUBLE, "DoubleFraction"),
+        new GroupType(
+            OPTIONAL,
+            "Links",
+            new PrimitiveType(REPEATED, BINARY, "Backward"),
+            new PrimitiveType(REPEATED, BINARY, "Forward")));
   }
 
-  private void validateColumnData(Set<String> prunePaths,
-                                  Set<String> nullifiedPaths,
-                                  FileDecryptionProperties fileDecryptionProperties) throws IOException {
+  private MessageType createSchemaToJoin() {
+    return new MessageType(
+        "schema",
+        new PrimitiveType(REPEATED, FLOAT, "FloatFraction"),
+        new PrimitiveType(OPTIONAL, INT64, "Age"),
+        new GroupType(
+            OPTIONAL,
+            "Links",
+            new PrimitiveType(REPEATED, BINARY, "Backward"),
+            new PrimitiveType(REPEATED, BINARY, "Forward")));
+  }
+
+  private MessageType createSchemaWithRenamed() {
+    return new MessageType(
+        "schema",
+        new PrimitiveType(OPTIONAL, INT64, "DocId"),
+        new PrimitiveType(REQUIRED, BINARY, "NameRenamed"),
+        new PrimitiveType(REPEATED, FLOAT, "FloatFraction"),
+        new PrimitiveType(OPTIONAL, DOUBLE, "DoubleFraction"),
+        new GroupType(
+            OPTIONAL,
+            "Links",
+            new PrimitiveType(REPEATED, BINARY, "Backward"),
+            new PrimitiveType(REPEATED, BINARY, "Forward")));
+  }
+
+  private void validateColumnData(
+      Set<String> prunePaths,
+      Set<String> nullifiedPaths,
+      FileDecryptionProperties fileDecryptionProperties,
+      Boolean joinColumnsOverwrite,
+      Map<String, String> renameColumns)
+      throws IOException {
     ParquetReader<Group> reader = ParquetReader.builder(new GroupReadSupport(), new Path(outputFile))
-            .withConf(conf).withDecryption(fileDecryptionProperties).build();
+        .withConf(conf)
+        .withDecryption(fileDecryptionProperties)
+        .build();
 
-    // Get total number of rows from input files
-    int totalRows = 0;
-    for (EncryptionTestFile inputFile : inputFiles) {
-      totalRows += inputFile.getFileContent().length;
-    }
+    List<SimpleGroup> filesMain = inputFiles.stream()
+        .flatMap(x -> Arrays.stream(x.getFileContent()))
+        .collect(Collectors.toList());
+    List<SimpleGroup> filesJoined = inputFilesToJoin.stream()
+        .flatMap(x -> Arrays.stream(x.getFileContent()))
+        .collect(Collectors.toList());
+    BiFunction<String, Integer, Group> groupsExpected = (name, rowIdx) -> {
+      if (!filesMain.get(0).getType().containsField(name)
+          || joinColumnsOverwrite
+              && !filesJoined.isEmpty()
+              && filesJoined.get(0).getType().containsField(name)) {
+        return filesJoined.get(rowIdx);
+      } else {
+        return filesMain.get(rowIdx);
+      }
+    };
 
+    int totalRows =
+        inputFiles.stream().mapToInt(x -> x.getFileContent().length).sum();
     for (int i = 0; i < totalRows; i++) {
-      Group group = reader.read();
-      assertNotNull(group);
-
-      SimpleGroup expectGroup = inputFiles.get(i / numRecord).getFileContent()[i % numRecord];
+      Group groupActual = reader.read();
+      assertNotNull(groupActual);
 
       if (!prunePaths.contains("DocId")) {
         if (nullifiedPaths.contains("DocId")) {
-          assertThrows(RuntimeException.class, () -> group.getLong("DocId", 0));
+          assertThrows(RuntimeException.class, () -> groupActual.getLong("DocId", 0));
         } else {
-          assertEquals(group.getLong("DocId", 0), expectGroup.getLong("DocId", 0));
+          assertEquals(
+              groupActual.getLong("DocId", 0),
+              groupsExpected.apply("DocId", i).getLong("DocId", 0));
         }
       }
 
       if (!prunePaths.contains("Name") && !nullifiedPaths.contains("Name")) {
-        assertArrayEquals(group.getBinary("Name", 0).getBytes(),
-                expectGroup.getBinary("Name", 0).getBytes());
+        String colName = renameColumns.getOrDefault("Name", "Name");
+        assertArrayEquals(
+            groupActual.getBinary(colName, 0).getBytes(),
+            groupsExpected.apply("Name", i).getBinary("Name", 0).getBytes());
       }
 
       if (!prunePaths.contains("Gender") && !nullifiedPaths.contains("Gender")) {
-        assertArrayEquals(group.getBinary("Gender", 0).getBytes(),
-                expectGroup.getBinary("Gender", 0).getBytes());
+        assertArrayEquals(
+            groupActual.getBinary("Gender", 0).getBytes(),
+            groupsExpected.apply("Gender", i).getBinary("Gender", 0).getBytes());
       }
 
       if (!prunePaths.contains("FloatFraction") && !nullifiedPaths.contains("FloatFraction")) {
-        assertEquals(group.getFloat("FloatFraction", 0),
-                expectGroup.getFloat("FloatFraction", 0), 0);
+        assertEquals(
+            groupActual.getFloat("FloatFraction", 0),
+            groupsExpected.apply("FloatFraction", i).getFloat("FloatFraction", 0),
+            0);
       }
 
       if (!prunePaths.contains("DoubleFraction") && !nullifiedPaths.contains("DoubleFraction")) {
-        assertEquals(group.getDouble("DoubleFraction", 0),
-                expectGroup.getDouble("DoubleFraction", 0), 0);
+        assertEquals(
+            groupActual.getDouble("DoubleFraction", 0),
+            groupsExpected.apply("DoubleFraction", i).getDouble("DoubleFraction", 0),
+            0);
       }
 
-      Group subGroup = group.getGroup("Links", 0);
+      Group subGroup = groupActual.getGroup("Links", 0);
 
       if (!prunePaths.contains("Links.Backward") && !nullifiedPaths.contains("Links.Backward")) {
-        assertArrayEquals(subGroup.getBinary("Backward", 0).getBytes(),
-                expectGroup.getGroup("Links", 0).getBinary("Backward", 0).getBytes());
+        assertArrayEquals(
+            subGroup.getBinary("Backward", 0).getBytes(),
+            groupsExpected
+                .apply("Links", i)
+                .getGroup("Links", 0)
+                .getBinary("Backward", 0)
+                .getBytes());
       }
 
       if (!prunePaths.contains("Links.Forward")) {
         if (nullifiedPaths.contains("Links.Forward")) {
           assertThrows(RuntimeException.class, () -> subGroup.getBinary("Forward", 0));
         } else {
-          assertArrayEquals(subGroup.getBinary("Forward", 0).getBytes(),
-                  expectGroup.getGroup("Links", 0).getBinary("Forward", 0).getBytes());
+          assertArrayEquals(
+              subGroup.getBinary("Forward", 0).getBytes(),
+              groupsExpected
+                  .apply("Links", i)
+                  .getGroup("Links", 0)
+                  .getBinary("Forward", 0)
+                  .getBytes());
         }
       }
     }
@@ -717,12 +1094,12 @@ public class ParquetRewriterTest {
     reader.close();
   }
 
-  private ParquetMetadata getFileMetaData(String file,
-                                          FileDecryptionProperties fileDecryptionProperties) throws IOException {
+  private ParquetMetadata getFileMetaData(String file, FileDecryptionProperties fileDecryptionProperties)
+      throws IOException {
     ParquetReadOptions readOptions = ParquetReadOptions.builder()
-            .withDecryption(fileDecryptionProperties)
-            .build();
-    ParquetMetadata pmd = null;
+        .withDecryption(fileDecryptionProperties)
+        .build();
+    ParquetMetadata pmd;
     InputFile inputFile = HadoopInputFile.fromPath(new Path(file), conf);
     try (SeekableInputStream in = inputFile.newStream()) {
       pmd = ParquetFileReader.readFooter(inputFile, readOptions, in);
@@ -730,9 +1107,9 @@ public class ParquetRewriterTest {
     return pmd;
   }
 
-  private void verifyCodec(String file,
-                           Set<CompressionCodecName> expectedCodecs,
-                           FileDecryptionProperties fileDecryptionProperties) throws IOException {
+  private void verifyCodec(
+      String file, Set<CompressionCodecName> expectedCodecs, FileDecryptionProperties fileDecryptionProperties)
+      throws IOException {
     Set<CompressionCodecName> codecs = new HashSet<>();
     ParquetMetadata pmd = getFileMetaData(file, fileDecryptionProperties);
     for (int i = 0; i < pmd.getBlocks().size(); i++) {
@@ -745,69 +1122,119 @@ public class ParquetRewriterTest {
     assertEquals(expectedCodecs, codecs);
   }
 
+  @FunctionalInterface
+  interface CheckedFunction<T, R> {
+    R apply(T t) throws IOException;
+  }
+
+  private ColumnPath normalizeFieldsInPath(ColumnPath path, Map<String, String> renameColumns) {
+    String[] pathArray = path.toArray();
+    if (renameColumns != null) {
+      pathArray[0] = renameColumns.getOrDefault(pathArray[0], pathArray[0]);
+    }
+    return ColumnPath.get(pathArray);
+  }
+
   /**
    * Verify the page index is correct.
    *
-   * @param outFileColumnMapping the column mapping from the output file to the input file.
+   * @param exclude the columns to exclude from comparison, for example because they were nullified.
+   * @param joinColumnsOverwrite whether a join columns overwrote existing overlapping columns.
    */
-  private void validatePageIndex(Map<Integer, Integer> outFileColumnMapping) throws Exception {
-    ParquetMetadata outMetaData = getFileMetaData(outputFile, null);
+  private void validatePageIndex(Set<String> exclude, boolean joinColumnsOverwrite, Map<String, String> renameColumns)
+      throws Exception {
+    class BlockMeta {
+      final TransParquetFileReader reader;
+      final BlockMetaData blockMeta;
+      final Map<ColumnPath, ColumnChunkMetaData> colPathToMeta;
 
-    int inputFileIndex = 0;
-    TransParquetFileReader inReader = new TransParquetFileReader(HadoopInputFile.fromPath(
-            new Path(inputFiles.get(inputFileIndex).getFileName()), conf), HadoopReadOptions.builder(conf).build());
-    ParquetMetadata inMetaData = inReader.getFooter();
+      BlockMeta(
+          TransParquetFileReader reader,
+          BlockMetaData blockMeta,
+          Map<ColumnPath, ColumnChunkMetaData> colPathToMeta) {
+        this.reader = reader;
+        this.blockMeta = blockMeta;
+        this.colPathToMeta = colPathToMeta;
+      }
+    }
+    CheckedFunction<List<String>, List<BlockMeta>> blockMetaExtractor = files -> {
+      List<BlockMeta> result = new ArrayList<>();
+      for (String inputFile : files) {
+        TransParquetFileReader reader = new TransParquetFileReader(
+            HadoopInputFile.fromPath(new Path(inputFile), conf),
+            HadoopReadOptions.builder(conf).build());
+        reader.getFooter()
+            .getBlocks()
+            .forEach(blockMetaData -> result.add(new BlockMeta(
+                reader,
+                blockMetaData,
+                blockMetaData.getColumns().stream()
+                    .collect(
+                        Collectors.toMap(ColumnChunkMetaData::getPath, Function.identity())))));
+      }
+      return result;
+    };
 
-    try (TransParquetFileReader outReader = new TransParquetFileReader(
-            HadoopInputFile.fromPath(new Path(outputFile), conf), HadoopReadOptions.builder(conf).build())) {
-
-      for (int outBlockId = 0, inBlockId = 0; outBlockId < outMetaData.getBlocks().size(); ++outBlockId, ++inBlockId) {
-        // Refresh reader of input file
-        if (inBlockId == inMetaData.getBlocks().size()) {
-          inReader = new TransParquetFileReader(
-                  HadoopInputFile.fromPath(new Path(inputFiles.get(++inputFileIndex).getFileName()), conf),
-                  HadoopReadOptions.builder(conf).build());
-          inMetaData = inReader.getFooter();
-          inBlockId = 0;
+    List<BlockMeta> inBlocksMain = blockMetaExtractor.apply(
+        inputFiles.stream().map(EncryptionTestFile::getFileName).collect(Collectors.toList()));
+    List<BlockMeta> inBlocksJoined = blockMetaExtractor.apply(
+        inputFilesToJoin.stream().map(EncryptionTestFile::getFileName).collect(Collectors.toList()));
+    List<BlockMeta> outBlocks = blockMetaExtractor.apply(ImmutableList.of(outputFile));
+    Map<String, String> renameColumnsInverted =
+        renameColumns.entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue, Map.Entry::getKey));
+    for (int blockIdx = 0; blockIdx < outBlocks.size(); blockIdx++) {
+      BlockMetaData outBlockMeta = outBlocks.get(blockIdx).blockMeta;
+      TransParquetFileReader outReader = outBlocks.get(blockIdx).reader;
+      for (ColumnChunkMetaData outChunk : outBlockMeta.getColumns()) {
+        if (exclude.contains(outChunk.getPath().toDotString())) continue;
+        TransParquetFileReader inReader;
+        BlockMetaData inBlockMeta;
+        ColumnChunkMetaData inChunk;
+        ColumnPath colPath = normalizeFieldsInPath(outChunk.getPath(), renameColumnsInverted);
+        if (!inBlocksMain.get(blockIdx).colPathToMeta.containsKey(colPath)
+            || joinColumnsOverwrite
+                && !inBlocksJoined.isEmpty()
+                && inBlocksJoined.get(blockIdx).colPathToMeta.containsKey(colPath)) {
+          inReader = inBlocksJoined.get(blockIdx).reader;
+          inBlockMeta = inBlocksJoined.get(blockIdx).blockMeta;
+          inChunk = inBlocksJoined.get(blockIdx).colPathToMeta.get(colPath);
+        } else {
+          inReader = inBlocksMain.get(blockIdx).reader;
+          inBlockMeta = inBlocksMain.get(blockIdx).blockMeta;
+          inChunk = inBlocksMain.get(blockIdx).colPathToMeta.get(colPath);
         }
 
-        BlockMetaData inBlockMetaData = inMetaData.getBlocks().get(inBlockId);
-        BlockMetaData outBlockMetaData = outMetaData.getBlocks().get(outBlockId);
-
-        for (int j = 0; j < outBlockMetaData.getColumns().size(); j++) {
-          if (!outFileColumnMapping.containsKey(j)) {
-            continue;
-          }
-          int columnIdFromInputFile = outFileColumnMapping.get(j);
-          ColumnChunkMetaData inChunk = inBlockMetaData.getColumns().get(columnIdFromInputFile);
-          ColumnIndex inColumnIndex = inReader.readColumnIndex(inChunk);
-          OffsetIndex inOffsetIndex = inReader.readOffsetIndex(inChunk);
-          ColumnChunkMetaData outChunk = outBlockMetaData.getColumns().get(j);
-          ColumnIndex outColumnIndex = outReader.readColumnIndex(outChunk);
-          OffsetIndex outOffsetIndex = outReader.readOffsetIndex(outChunk);
-          if (inColumnIndex != null) {
-            assertEquals(inColumnIndex.getBoundaryOrder(), outColumnIndex.getBoundaryOrder());
-            assertEquals(inColumnIndex.getMaxValues(), outColumnIndex.getMaxValues());
-            assertEquals(inColumnIndex.getMinValues(), outColumnIndex.getMinValues());
-            assertEquals(inColumnIndex.getNullCounts(), outColumnIndex.getNullCounts());
-          }
-          if (inOffsetIndex != null) {
-            List<Long> inOffsets = getOffsets(inReader, inChunk);
-            List<Long> outOffsets = getOffsets(outReader, outChunk);
-            assertEquals(inOffsets.size(), outOffsets.size());
-            assertEquals(inOffsets.size(), inOffsetIndex.getPageCount());
-            assertEquals(inOffsetIndex.getPageCount(), outOffsetIndex.getPageCount());
-            for (int k = 0; k < inOffsetIndex.getPageCount(); k++) {
-              assertEquals(inOffsetIndex.getFirstRowIndex(k), outOffsetIndex.getFirstRowIndex(k));
-              assertEquals(inOffsetIndex.getLastRowIndex(k, inChunk.getValueCount()),
-                      outOffsetIndex.getLastRowIndex(k, outChunk.getValueCount()));
-              assertEquals(inOffsetIndex.getOffset(k), (long) inOffsets.get(k));
-              assertEquals(outOffsetIndex.getOffset(k), (long) outOffsets.get(k));
-            }
+        ColumnIndex inColumnIndex = inReader.readColumnIndex(inChunk);
+        OffsetIndex inOffsetIndex = inReader.readOffsetIndex(inChunk);
+        ColumnIndex outColumnIndex = outReader.readColumnIndex(outChunk);
+        OffsetIndex outOffsetIndex = outReader.readOffsetIndex(outChunk);
+        if (inColumnIndex != null) {
+          assertEquals(inColumnIndex.getBoundaryOrder(), outColumnIndex.getBoundaryOrder());
+          assertEquals(inColumnIndex.getMaxValues(), outColumnIndex.getMaxValues());
+          assertEquals(inColumnIndex.getMinValues(), outColumnIndex.getMinValues());
+          assertEquals(inColumnIndex.getNullCounts(), outColumnIndex.getNullCounts());
+        }
+        if (inOffsetIndex != null) {
+          List<Long> inOffsets = getOffsets(inReader, inChunk);
+          List<Long> outOffsets = getOffsets(outReader, outChunk);
+          assertEquals(inOffsets.size(), outOffsets.size());
+          assertEquals(inOffsets.size(), inOffsetIndex.getPageCount());
+          assertEquals(inOffsetIndex.getPageCount(), outOffsetIndex.getPageCount());
+          for (int k = 0; k < inOffsetIndex.getPageCount(); k++) {
+            assertEquals(inOffsetIndex.getFirstRowIndex(k), outOffsetIndex.getFirstRowIndex(k));
+            assertEquals(
+                inOffsetIndex.getLastRowIndex(k, inBlockMeta.getRowCount()),
+                outOffsetIndex.getLastRowIndex(k, outBlockMeta.getRowCount()));
+            assertEquals(inOffsetIndex.getOffset(k), (long) inOffsets.get(k));
+            assertEquals(outOffsetIndex.getOffset(k), (long) outOffsets.get(k));
           }
         }
       }
     }
+
+    for (BlockMeta t3 : inBlocksMain) t3.reader.close();
+    for (BlockMeta t3 : inBlocksJoined) t3.reader.close();
+    for (BlockMeta t3 : outBlocks) t3.reader.close();
   }
 
   private List<Long> getOffsets(TransParquetFileReader reader, ColumnChunkMetaData chunk) throws IOException {
@@ -848,7 +1275,9 @@ public class ParquetRewriterTest {
 
   private void validateCreatedBy() throws Exception {
     Set<String> createdBySet = new HashSet<>();
-    for (EncryptionTestFile inputFile : inputFiles) {
+    List<EncryptionTestFile> inFiles =
+        Stream.concat(inputFiles.stream(), inputFilesToJoin.stream()).collect(Collectors.toList());
+    for (EncryptionTestFile inputFile : inFiles) {
       ParquetMetadata pmd = getFileMetaData(inputFile.getFileName(), null);
       createdBySet.add(pmd.getFileMetaData().getCreatedBy());
       assertNull(pmd.getFileMetaData().getKeyValueMetaData().get(ParquetRewriter.ORIGINAL_CREATED_BY_KEY));
@@ -874,26 +1303,26 @@ public class ParquetRewriterTest {
     List<Long> inputRowCounts = new ArrayList<>();
     for (EncryptionTestFile inputFile : inputFiles) {
       ParquetMetadata inputPmd = getFileMetaData(inputFile.getFileName(), null);
-      for (BlockMetaData blockMetaData: inputPmd.getBlocks()) {
+      for (BlockMetaData blockMetaData : inputPmd.getBlocks()) {
         inputRowCounts.add(blockMetaData.getRowCount());
       }
     }
 
     List<Long> outputRowCounts = new ArrayList<>();
     ParquetMetadata outPmd = getFileMetaData(outputFile, null);
-    for (BlockMetaData blockMetaData: outPmd.getBlocks()) {
+    for (BlockMetaData blockMetaData : outPmd.getBlocks()) {
       outputRowCounts.add(blockMetaData.getRowCount());
     }
 
     assertEquals(inputRowCounts, outputRowCounts);
   }
 
-  private Map<ColumnPath, List<BloomFilter>> allInputBloomFilters(
-    FileDecryptionProperties fileDecryptionProperties) throws Exception {
+  private Map<ColumnPath, List<BloomFilter>> allInputBloomFilters() throws Exception {
     Map<ColumnPath, List<BloomFilter>> inputBloomFilters = new HashMap<>();
-    for (EncryptionTestFile inputFile : inputFiles) {
-      Map<ColumnPath, List<BloomFilter>> bloomFilters =
-        allBloomFilters(inputFile.getFileName(), fileDecryptionProperties);
+    List<EncryptionTestFile> files =
+        Stream.concat(inputFiles.stream(), inputFilesToJoin.stream()).collect(Collectors.toList());
+    for (EncryptionTestFile inputFile : files) {
+      Map<ColumnPath, List<BloomFilter>> bloomFilters = allBloomFilters(inputFile.getFileName(), null);
       for (Map.Entry<ColumnPath, List<BloomFilter>> entry : bloomFilters.entrySet()) {
         List<BloomFilter> bloomFilterList = inputBloomFilters.getOrDefault(entry.getKey(), new ArrayList<>());
         bloomFilterList.addAll(entry.getValue());
@@ -904,26 +1333,26 @@ public class ParquetRewriterTest {
     return inputBloomFilters;
   }
 
-  private Map<ColumnPath, List<BloomFilter>> allOutputBloomFilters(
-    FileDecryptionProperties fileDecryptionProperties) throws Exception {
+  private Map<ColumnPath, List<BloomFilter>> allOutputBloomFilters(FileDecryptionProperties fileDecryptionProperties)
+      throws Exception {
     return allBloomFilters(outputFile, fileDecryptionProperties);
   }
 
   private Map<ColumnPath, List<BloomFilter>> allBloomFilters(
-    String path, FileDecryptionProperties fileDecryptionProperties) throws Exception {
+      String path, FileDecryptionProperties fileDecryptionProperties) throws Exception {
     Map<ColumnPath, List<BloomFilter>> allBloomFilters = new HashMap<>();
     ParquetReadOptions readOptions = ParquetReadOptions.builder()
-      .withDecryption(fileDecryptionProperties)
-      .build();
+        .withDecryption(fileDecryptionProperties)
+        .build();
     InputFile inputFile = HadoopInputFile.fromPath(new Path(path), conf);
     try (TransParquetFileReader reader = new TransParquetFileReader(inputFile, readOptions)) {
       ParquetMetadata metadata = reader.getFooter();
-      for (BlockMetaData blockMetaData: metadata.getBlocks()) {
+      for (BlockMetaData blockMetaData : metadata.getBlocks()) {
         for (ColumnChunkMetaData columnChunkMetaData : blockMetaData.getColumns()) {
           BloomFilter bloomFilter = reader.readBloomFilter(columnChunkMetaData);
           if (bloomFilter != null) {
             List<BloomFilter> bloomFilterList =
-              allBloomFilters.getOrDefault(columnChunkMetaData.getPath(), new ArrayList<>());
+                allBloomFilters.getOrDefault(columnChunkMetaData.getPath(), new ArrayList<>());
             bloomFilterList.add(bloomFilter);
             allBloomFilters.put(columnChunkMetaData.getPath(), bloomFilterList);
           }
@@ -934,19 +1363,61 @@ public class ParquetRewriterTest {
     return allBloomFilters;
   }
 
-  private void validateSchema() throws IOException {
-    ParquetMetadata pmd = ParquetFileReader.readFooter(conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER);
-    MessageType schema = pmd.getFileMetaData().getSchema();
-    List<Type> fields = schema.getFields();
-    assertEquals(fields.size(), 5);
-    assertEquals(fields.get(0).getName(), "DocId");
-    assertEquals(fields.get(1).getName(), "Name");
-    assertEquals(fields.get(2).getName(), "FloatFraction");
-    assertEquals(fields.get(3).getName(), "DoubleFraction");
-    assertEquals(fields.get(4).getName(), "Links");
-    List<Type> subFields = fields.get(4).asGroupType().getFields();
-    assertEquals(subFields.size(), 2);
-    assertEquals(subFields.get(0).getName(), "Backward");
-    assertEquals(subFields.get(1).getName(), "Forward");
+  private RewriteOptions.Builder createBuilder(List<Path> inputPaths) throws IOException {
+    return createBuilder(inputPaths, new ArrayList<>(), false);
+  }
+
+  private RewriteOptions.Builder createBuilder(
+      List<Path> inputPathsL, List<Path> inputPathsR, boolean overwriteInputWithJoinColumns) throws IOException {
+    RewriteOptions.Builder builder;
+    if (usingHadoop) {
+      Path outputPath = new Path(outputFile);
+      builder = new RewriteOptions.Builder(conf, inputPathsL, inputPathsR, outputPath);
+    } else {
+      OutputFile outputPath = HadoopOutputFile.fromPath(new Path(outputFile), conf);
+      List<InputFile> inputsL = inputPathsL.stream()
+          .map(p -> HadoopInputFile.fromPathUnchecked(p, conf))
+          .collect(Collectors.toList());
+      List<InputFile> inputsR = inputPathsR.stream()
+          .map(p -> HadoopInputFile.fromPathUnchecked(p, conf))
+          .collect(Collectors.toList());
+      builder = new RewriteOptions.Builder(parquetConf, inputsL, inputsR, outputPath);
+    }
+    builder.overwriteInputWithJoinColumns(overwriteInputWithJoinColumns);
+    return builder;
+  }
+
+  private void validateSchemaWithGenderColumnPruned(boolean addJoinedColumn) throws IOException {
+    MessageType expectSchema = new MessageType(
+        "schema",
+        new PrimitiveType(OPTIONAL, INT64, "DocId"),
+        new PrimitiveType(REQUIRED, BINARY, "Name"),
+        new PrimitiveType(REPEATED, FLOAT, "FloatFraction"),
+        new PrimitiveType(OPTIONAL, DOUBLE, "DoubleFraction"),
+        new GroupType(
+            OPTIONAL,
+            "Links",
+            new PrimitiveType(REPEATED, BINARY, "Backward"),
+            new PrimitiveType(REPEATED, BINARY, "Forward")));
+    if (addJoinedColumn) {
+      expectSchema = expectSchema.union(new MessageType("schema", new PrimitiveType(OPTIONAL, INT64, "Age")));
+    }
+    MessageType actualSchema = ParquetFileReader.readFooter(
+            conf, new Path(outputFile), ParquetMetadataConverter.NO_FILTER)
+        .getFileMetaData()
+        .getSchema();
+    assertEquals(expectSchema, actualSchema);
+  }
+
+  private void addGzipInputFile() {
+    if (!inputFiles.contains(gzipEncryptionTestFileWithoutBloomFilterColumn)) {
+      inputFiles.add(this.gzipEncryptionTestFileWithoutBloomFilterColumn);
+    }
+  }
+
+  private void addUncompressedInputFile() {
+    if (!inputFiles.contains(uncompressedEncryptionTestFileWithoutBloomFilterColumn)) {
+      inputFiles.add(uncompressedEncryptionTestFileWithoutBloomFilterColumn);
+    }
   }
 }
